--- a/shared/art/技術.md
+++ b/shared/art/技術.md
@@ -149,3 +149,5 @@ engineeringは理論的。
 逆に、怪我や病気、寿命で、できていたことができなくなった時に許せるかどうか。それにもまた対応しないといけない。
 
 技とはアイデアである。
+
+技術はシンプルでいい。まずは身体の鍛錬から。特に思った通りに体を動かせるようにする。頭と体を一致させる。身体が変われば技術もまた変わる。身体ができてから技術を極めるのが効率的だ。
