--- a/shared/health/exercise/運動.md
+++ b/shared/health/exercise/運動.md
@@ -27,3 +27,5 @@
 運動中は胸式呼吸も使って、とにかく二酸化炭素を捨てるのが重要。
 
 どうせ運動するなら、家でも寝転がるより座ったり立ったりする方が効率的。
+
+全身がスムーズに動けるように力を抜いているようで力を入れている状態が理想。無駄な力は入ってないが、必要な力が巡っている。
