--- a/shared/life/自死.md
+++ b/shared/life/自死.md
@@ -18,3 +18,5 @@
 自死は別に馬とかもするし自由でもなんでもない。家畜にもできる程度のことだ。カタツムリが寄生虫にやられて鳥に食われやすいところに移動するのも同じだし。
 
 人はいつか死ぬ。それを単に早めるだけの自死は自然の一部でしかない。自由とは、自然には手に入らないものを言う。
+
+切腹は介錯とセット。切腹自体は自殺の方法としては下策で、長く苦しむだけ。
