--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -357,3 +357,7 @@ https://x.com/ggnka_icha/status/1810274912759918858
 敬うからといって大事するとは限らない。警戒もまた敬うことだ。
 
 貴族制や階級制を採用している組織においては、上位の階級の人に敬意を示すのが重要。たとえ外の人でも、階級に敬意を示すことで相手を尊重する。
+
+神を敬う習慣のうちどこまでが人のでっちあげたものなのかは判別する必要がある。
+
+神を敬う習慣は人を敬う習慣につながる。
