--- a/shared/people/tips/人間の価値.md
+++ b/shared/people/tips/人間の価値.md
@@ -9,3 +9,5 @@
 自分のことを好きな人は価値が高くて、そうでない人は価値が低い。だから、他人をよく嫌うような人はそもそも価値が低い人間になりがち。
 
 当たり前だけど、自分の行いは自分の評価につながる。
+
+人間には価値がある。使い勝手のいい道具だし、経済を動かす歯車でもある。
