--- a/shared/war/敵.md
+++ b/shared/war/敵.md
@@ -41,3 +41,5 @@ Lose-Winの関係をLose-Loseに引きずり込む。
 
 誰かと敵対した際に重要なのは、もう関わりたくないと思うくらいの損害を与えること。できれば殺すこと。Lose-Winの関係からLose-Loseに持ち込む。
 部族や組織の場合は殺すのが難しいので、できるだけ損害を与える。恨みを買う程度では足りない。恨みも持てないくらい後悔させるのが重要。
+
+敵を敬い、恐れよ。
