--- a/study/politics/秩序.md
+++ b/study/politics/秩序.md
@@ -22,3 +22,9 @@
 systemとcosmos、秩序と混沌。
 
 ルールや秩序を重視するあまり、ルールの境界線上にある本当に判断が難しい問題から目を背けてはならない。ルールは楽をするためにあるが、ルールの運用は楽ではない。
+
+人間の秩序など自然の秩序に比べたら取るに足らない。
+
+怪物が人を害するのはむしろ自然なことで秩序に反していない。
+
+平和は秩序に近いものがあるけど、秩序があるから平和とも言えない。不穏な秩序もある。
