--- a/shared/government/legal/法律.md
+++ b/shared/government/legal/法律.md
@@ -32,3 +32,5 @@
 行政がサービスを提供できないなら、代わりに国民がサービスを提供するのを違法にするべきではない。
 
 もし魔法の世界のように国の軍事行動で止められない個人がいた場合、超法規的な存在になる。あるいはSFの世界のように個人で所有、運用できる戦略兵器がある場合も同様である。法律はあくまでも国家の軍事力を背景に成立するものでしかない。
+
+廃墟でも許可を取らないと不法侵入になる。
