--- a/games/Pawapro/2024/栄冠ナイン.md
+++ b/games/Pawapro/2024/栄冠ナイン.md
@@ -477,3 +477,5 @@ Cあると大きく崩れることがかなり減る感覚。
 捕手と三塁手は適性が近いのでコンバートしやすい。
 
 2025アップデートで代打ボーナスがなくなって、パリコレするだけでは経験値が入らなくなった。ちゃんと打たないといけない。代走ボーナスはある。
+
+同じ数字なら転がせがヒットにはなりやすい。ただ、ゴロを避けたい場面や守備が堅い相手だと内野の頭を超えないと厳しい。
