--- a/shared/life/死.md
+++ b/shared/life/死.md
@@ -37,3 +37,5 @@ https://x.com/badassceo/status/1111934061788852224
 「死にたい」は「死にそう」の錯誤でしかない。
 
 「人はなぜ死ななければならないと思う？」『亜人』
+
+死を恐れて逃げるばかりではダメ。抗う。逃げないけど、死なないようにする。死はどうせどこかで来るので恐れない。
