--- a/shared/sports/野球.md
+++ b/shared/sports/野球.md
@@ -42,6 +42,8 @@
 - 長打を避けるならファーストとサードをファールラインに近づける
   - （内野を抜かれやすくなるが、中央付近を抜かれても後ろに外野がいるので長打は避けられる）
 
+走者一塁の時は一打抜かれても一二塁か一三塁になるだけなのでゲッツーシフトでもいい。特にノーアウトでないならさらにリスクが低い。
+
 ## 打順のセオリー
 
 - 一番には、とにかく出塁率が優れたバッター
