--- a/shared/leisure/examples/travel/jp/東京.md
+++ b/shared/leisure/examples/travel/jp/東京.md
@@ -20,3 +20,6 @@ https://www.tokyo-zoo.net/zoo/ino/hanagoyomi/index.html
 東京競馬場には公園もフードコートもある。
 
 国際展示場まで新宿から埼京線で25分。意外と早い。
+
+多摩行きの中央線は始点の東京から乗ると座りやすい。
+東京行きだと立川、三鷹、新宿あたりの乗り換えが多くて座りやすい。
