--- a/shared/lifestyle/clothing/服を買う.md
+++ b/shared/lifestyle/clothing/服を買う.md
@@ -1,2 +1,5 @@
 服はできればセットアップで買った方がいい。
 好みの一点を見つけたら、店員さんに組み合わせを考えてもらってもいいし、自分でセットを考えてもいい。
+
+特にジャケットとスラックスは色や生地を揃えてセットで買ったほうが着やすい。
+まぁ、ジーパンにジャケットとかも合うけど、それとは別にスラックスもあると気回しやすい。
