--- a/shared/music/vocal/training/tips/音程を合わせる.md
+++ b/shared/music/vocal/training/tips/音程を合わせる.md
@@ -1,11 +1,26 @@
+## 練習の順序
+
+まず声帯の伸縮で自然に特定のピッチの声が出せないと、音程を合わせる以前の問題。不自然な出し方で音程を合わせるのは誰にでもできる。
+
+良い声が出せるようになってから、ピッチを合わせる。
+
+## 練習方法
+
+練習は、一音を聞いて、一音を返す、の繰り返しが基本。
+
+1. 特定のピッチのbeep音を聞く
+2. 同じピッチでロングトーンを出す
+
+ロングトーンは入りから締めまで一定にして、しゃくったりフォールしたりしない。
+
+## メモ
+
 まずは声として高い声、低い声が出せないと音程を合わせられない。
 
 音程を合わせるのは声というよりも歌。声としては高い声、低い声が出せるところまで。歌としては原曲を聴いて、同じ音が出せるようにする。基本的には上よりも下に外れやすい。
 基本的な練習としては、一音を聞いて、一音を返す。最初は短く、慣れたらロングトーンで。
 
 音程が外れるというのは伴奏とハーモニーにならないということで、必ずしも原曲と一致する必要はない。
-
-まず声帯の伸縮で自然に特定のピッチの声が出せないと、音程を合わせる以前の問題。不自然な出し方で音程を合わせるのは誰にでもできる。
 
 単調にメロディを辿れなかったら高いところだけ息を強くしたり低いところだけ喉を下げたりして無理やり発声している。
 
@@ -15,3 +30,19 @@
 音程の移動が遅いと音程がずれているように聞こえる。声帯の鍛え方が足りてない。
 
 まず音程が先で、滑舌というか発音が後。言語である前に音楽であるべき。
+
+イヤーモニターをつけて自分の声を聞きやすくすると、ピッチが合っているかどうか判断しやすい。風呂で歌っているのと同じ状態。
+
+音を当てるには様々な能力が必要。
+
+- 音の出始めからピッチを当てる能力
+- 細かくピッチを上下する能力
+- 大きくピッチを上げる能力
+- 大きくピッチを下げる能力
+
+https://youtu.be/lzP0toBya5c?si=XdfEx5wVmIzcppsR
+
+ピッチが急に上がるところは裏声で妥協しがち。
+できれば急激なピッチの変化に対応できる声帯を作ろう。
+
+声より少し小さいくらいで一定のピッチのBeep音を鳴らして、自分の声は下から上げていって、Beep音が聞こえなくなったら同じピッチになっている。
