--- a/shared/story/telling/時系列.md
+++ b/shared/story/telling/時系列.md
@@ -1,6 +1,12 @@
+# Timeline
+
 前後関係。
 
 エピソードというのは、時系列。
 時系列はコミュニケーションで正確さを高めるために伝えるべき重要な情報のひとつ。
 
 あえて時系列を崩して、読者を混乱させる手法もある。
+
+出来事を時系列に並べたもの。
+
+重要なことだけ抜き出す場合もあるし、些細なことまで書かれることもある。
