--- a/shared/story/telling/物語の描写.md
+++ b/shared/story/telling/物語の描写.md
@@ -1,6 +1,6 @@
 描写がわざとらしいと、体験がそのまま伝わらない。
 
-「彼女は喜んだ」というところを
+「彼女は喜んだ」というのは主観的。
 「彼女は笑いながら叫んだ。「ありがとう！」」と書くと具体的で客観的になる。
 相手が喜んでいるかどうかは相手にしかわからない。読者から、あるいは「あなた」から見える面は客観的であるべきだ。
 
