--- a/shared/story/telling/物語の企画.md
+++ b/shared/story/telling/物語の企画.md
@@ -32,6 +32,24 @@
 
 サイドストーリー
 
-## Reference
+## References
 
 https://note.com/mi_muramatsu/n/nc23e9e69bc1b
+
+## メモ
+
+まずは企画を作り切って、評価は後で考える。面白いかどうか、儲かるかどうか、は複雑すぎるし、企画の邪魔になる。良いものができると信じて集中すること。
+
+設定の決め方
+
+https://lifelikewriter.com/story-setting/
+
+1. アイデアの洗い出し
+2. シナリオの作成: 全体的なストーリーやエピソード、登場人物の動機や心情を練り上げる
+3. 登場人物の設定: 個性的な特徴や背景、外見などを詳細に詰める。
+4. 構成: 詳しい章立てや結末を考える
+5. 表現、描写: 文章や動画の形で具体的に描写する
+6. 編集: 表現の細部や流れ、読みやすさなどを練り上げる
+7. 校正: 誤字や脱字、文法や表現の誤りを機械的に修正する (linter で常に監視するといい)
+
+「重役の七割が賛成するプランは時すでに遅く、七割が反対するプランくらいでやっと先手が取れる。」（松下幸之助）
