--- a/shared/story/telling/物語の書き方.md
+++ b/shared/story/telling/物語の書き方.md
@@ -31,3 +31,11 @@
 最低限必要なのはテーマと描写だけ。プロットやシナリオで見せ場を絞るのは後から考えればいい。
 
 一人称の物語では貧しい表現こそが正しい場合もある。子どもとか。
+
+ストーリーの語り手によって、一人称と三人称の視点がある。
+つまり、特定の登場人物か、誰でもないか。
+
+視点が変わる時は話を区切ったほうがいいと思う。
+合間合間でテキトーに視点を切り替えていると読みづらい。
+
+細かいところはとにかく語彙や言い回しの手札を増やす。同じ語彙ばかりだと単調になる。
