--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -95,3 +95,41 @@ https://www.raitonoveru.jp/cms2/2019/06/25/44223/
 物語には時間があるけど、語り手が時系列で語るとは限らない。
 
 設定に無理があるとそっちが気になって物語に集中できない。
+
+ストーリーの基本は「誰が、何をしていて、それはなぜか」の形式で考えること。
+
+どうしたら、どうなるか。
+
+目的、方法、結果。
+
+あるいは「誰が、どのような活動をして、どのような状況を目指しているか」でもいい。
+
+ストーリーは結末から考える。
+
+「死んでもいいやつ」はべつに死ななくてもいい。
+むしろ死んだらまずいとか、死んでほしくないキャラが死ぬとインパクトがある。
+
+活動によって、求める結果は異なる。
+
+ストーリーには山と谷がある。
+
+以下の記事では、幸運と不運の上昇と下降によって、ストーリーの類型を６つに分けている。
+https://www.bbc.com/japanese/features-and-analysis-44286945
+
+ストーリーの類型:
+
+1. ↑: 立身出世
+2. ↓: 悲劇
+3. ↑↓: イカロス
+4. ↓↑: 穴の中の男
+5. ↓↑↓: オイディプス
+6. ↑↓↑: シンデレラ
+
+ストーリーは時系列。時系列の構造を考える。
+
+ミステリーのように複雑な物語を考えるときは、人物を縦に並べて、時間を横に並べて、出来事を時系列に整理したほうがいい。
+誰が、どこにいて、何をしていたか。
+
+敵の小物がだらだらと生き残ってるのは好きじゃない。小物らしくパッと散って退場してほしい。
+
+エンタメを考えるなら、主人公が判断を間違えた上で、なんとか取り返す、という流れが大事。
