--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -133,3 +133,5 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 敵の小物がだらだらと生き残ってるのは好きじゃない。小物らしくパッと散って退場してほしい。
 
 エンタメを考えるなら、主人公が判断を間違えた上で、なんとか取り返す、という流れが大事。
+
+ストーリーは結末よりも経緯が重要。まぁ、結末があまりにも悪いと後味悪いけど。
