--- a/study/economics/評価.md
+++ b/study/economics/評価.md
@@ -17,3 +17,6 @@ check
 評価は点数というよりも値段でつけるべき。自分なら、あるいは市場ならいくら出せるか、をつける。
 
 点数で評価する場合、それなりに良かったら全部100点でいい。それ以上は比較する必要もない。
+
+本人にとって、後世になってから評価されるのってどうなんだろう。
+まぁ、子孫や親類には財産を残せるのかも。
