--- a/shared/business/corporation/tips/リモートワーク.md
+++ b/shared/business/corporation/tips/リモートワーク.md
@@ -39,3 +39,8 @@ https://x.com/kakkokka/status/1836562345688207815
 バーチャルオフィスは思った以上に心理的な敷居を下げる。デザインは大事。
 
 リモートで仕事するなど、マイクをよく使うなら、マイクのON/OFFをワンボタンで切り替えられたほうがいい。ボタン付きのマイクを使うとか。
+
+> 単にコミュニケーション取りたくないみたいな人にはリモートワークは難しくて
+> オンラインミーティングでもチャットでも常に発言してるような人がリモートワーク向きです
+>
+> https://x.com/suthio_/status/1967478282347233360?s=12
