--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -136,3 +136,5 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 死なないことが生きることではないが、決まった生き方があるわけでもない。
 
 見たことがないものを見るのが生きるってことかも。
+
+「何の為に生きるかを捜すのも「生きる」と云う事だ。」『修羅の紋』
