--- a/shared/lifestyle/meal/楽な朝食.md
+++ b/shared/lifestyle/meal/楽な朝食.md
@@ -18,3 +18,5 @@ https://www.nichireifoods.co.jp/product/detail/sho_id14368/
 焼きおにぎりでお茶漬け作るのが便利。
 お茶漬けの素はだいたい米100gだけど、レトルトの米は150-200gなのでちょっと多い。
 ちょっと濃い味なのでお湯は多めに入れるといい。
+
+業スーのたこ焼きとか安くて便利。
