--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -180,3 +180,5 @@ SA1は発生が遅いので、相殺を狙っても負けがち。
 サガットの立ち回りはプロもみんなステローが強くて弾が弱いって言ってる。特に弱ショットは弱すぎる。
 
 サガットは小技で2MPが届かなくなるくらいまで離せるともっと楽だったんだけど。
+
+上弾をしゃがんで差し返しを狙ってくる相手には単に下弾を撃つ。差し返しを狙ってたらジャンプして避けるのは無理。
