--- a/shared/government/legal/法律.md
+++ b/shared/government/legal/法律.md
@@ -34,3 +34,7 @@
 もし魔法の世界のように国の軍事行動で止められない個人がいた場合、超法規的な存在になる。あるいはSFの世界のように個人で所有、運用できる戦略兵器がある場合も同様である。法律はあくまでも国家の軍事力を背景に成立するものでしかない。
 
 廃墟でも許可を取らないと不法侵入になる。
+
+日本の法律では、被害者や冤罪被害者に対する補償が十分とは言えない。関係者や加害者の公開処刑と肉刑によって罪を拭う必要がある。
+
+誘拐未遂を殺人未遂と同じ罪にするのは良い案だと思う。強盗なんかも統合して良い。
