--- a/shared/health/exercise/tips/体力をつける.md
+++ b/shared/health/exercise/tips/体力をつける.md
@@ -28,3 +28,6 @@ https://smartlog.jp/151080
 
 体力がついたと判断できる指標は何か。
 体力をつけるためにどんな活動が必要か。
+
+「体力をつけるためには体力が必要なのでは？」
+https://x.com/gomihitomi/status/1967427964758593829
