--- a/shared/cooking/recipes/牛肉料理.md
+++ b/shared/cooking/recipes/牛肉料理.md
@@ -5,6 +5,9 @@
 - 煮込み
   - ビーフカレー
   - 肉じゃが: じゃがいも
+  - 大和煮
 - 青椒肉絲: ピーマン
 
 和牛のA5とかは品質でなく脂質の量で決まるので、脂質が低いのが好みなら別にA5である必要はない。
+
+大和煮は生姜が入った甘辛煮。生姜焼きに近いけど、しょうがは千切りにして入れることが多い。まぁ、チューブとかで作ってもいい。
