--- a/shared/music/vocal/training/tips/音程を合わせる.md
+++ b/shared/music/vocal/training/tips/音程を合わせる.md
@@ -46,3 +46,8 @@ https://youtu.be/lzP0toBya5c?si=XdfEx5wVmIzcppsR
 できれば急激なピッチの変化に対応できる声帯を作ろう。
 
 声より少し小さいくらいで一定のピッチのBeep音を鳴らして、自分の声は下から上げていって、Beep音が聞こえなくなったら同じピッチになっている。
+
+高い音はともかく、中低音は狙った音が出せないというよりも、元の曲の音程を聞き取れてない場合もある。
+
+一音ずつ地声で音を取る練習をする。
+一つずつ鳴らして、地声で同じ音を出す練習。
