--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -73,3 +73,5 @@
 社交の基本はまず衝突を避けること。優しく接するのが基本だが、それを利用しようとする相手には武威を示す必要もある。餌と見れば噛み付いてくる害虫みたいな連中もいる。
 
 餌の前に堂々と姿を見せるのも、客に失礼な態度を取るのもどちらも間違っている。姿を大きく見せて威嚇しないといけないのは敵の前だけ。
+
+人付き合いやビジネスを試せる場が必要。捨ててもいい知人がたくさんいた方がいいかも。
