--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -267,3 +267,8 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 中音のロングトーンでも声が裏返るならまずは呼吸と声帯を安定させないといけない。特に終わりぎわに息が抜けないように、クレッシェンドして吐き切ってから力を抜いて息を吐く練習。
 
 まずは声を太く出せるようにしないと、抜いた時に細すぎる。声が太い分には息を抜いて調整できるのでまずは太く出せるようにする。
+
+息を吐きながら声帯で声を少しずつ大きくしていく練習をもっとする。
+
+まずは横隔膜を下げて息を細く強く吐く。
+そのまま、声を出すというよりは、声帯を閉じるだけ。
