--- a/shared/care/関心を持つ.md
+++ b/shared/care/関心を持つ.md
@@ -17,6 +17,7 @@
 
 そもそも相手の情報を会話で引き出せないと興味を持ちにくい。
 
+人を見たら、その人の1日を想像してみる。
 その人の1日を想像すると相手に興味を持ちやすくなる。物語を書く練習にもなる。
 
 人に配慮するためにはまず人を見ないといけない。目が合ったら目を逸らしてしまうとか、周囲をよく見れてないとか、人を見れてないならまずはそれが最初の課題。まずは見ることから始める。
