--- a/shared/care/関心を示す.md
+++ b/shared/care/関心を示す.md
@@ -48,3 +48,6 @@
 
 周りの人の変化を指摘する。
 前の状態を記憶しておかないといけない。メモしておいて会う前に見返すのもいいかも。
+
+くだらない話に関心を払うことで人に関心を払うことができる。
+さっさと本題に入ろうとするのは、その人自身には関心がないことを示してしまう。
