--- a/shared/music/vocal/training/ボーカルトレーニング.md
+++ b/shared/music/vocal/training/ボーカルトレーニング.md
@@ -136,8 +136,8 @@ https://youtu.be/L1SH1cRTOuM?si=bL92URDh81zOJCyM
 声の出し方が悪いのは演奏以前の問題。
 まずは正しい発声を身につける。ただ、それだけではつまらないので、覚えた範囲で歌える曲も覚えるといい。
 
-まずは単調になってもいいので、良い声で歌うのが第一。
-というかビブラートと自然な息の支えができていれば抑揚はある程度勝手につく。普通は高いところが強い声、低いところが細い声になる。
+まずは単調になってもいいので、柔らかい声で歌うのが第一。
+というかビブラートと自然な息の支えができていれば抑揚はある程度勝手につく。普通は自然とビブラートがかかって、高いところが強い声、低いところが弱い声になる。
 
 正確な拍子、
 正確な音程、
@@ -147,3 +147,22 @@ https://youtu.be/L1SH1cRTOuM?si=bL92URDh81zOJCyM
 歌を極めるなら、演劇とか、声に思考や感情を乗せることについても理解するべき。
 
 テンポを落としてメトロノームで正確にテンポをとりながら歌うのもいい練習になる。
+
+- 声帯を使う練習
+  - 大きな声で歌う
+  - 曲を覚える
+- 声帯以外で音を出す練習
+  - ハミング
+  - リップロール
+- 音を出さない練習
+  - 呼吸の練習
+  - リズムを取る練習
+
+声帯を使うなら、大きな声というか、抑えてない声で歌いたい。
+自室とかで抑えて歌う癖がついてしまうと大きな声で歌ってもそっちに引っ張られる。
+
+持ち歌の復習とか、細かいところを覚えて修正するのも大事。曲を覚えてないと記憶の通りに歌ってもずれてしまう。
+
+曲を覚えるだけなら大きな声でなくてもいい。基本はハミングが楽。抑えて歌ってしまうと変な癖がつきやすい。
+
+歌い方が良くなっても、鍛え方が足りないと不安定になりやすい。
