--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -345,3 +345,6 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 どんなことに慣れればいいかは学習するもので、練習の外。
 
 サボりに慣れることも練習。良いかどうかはともかく。
+
+難しいことにチャレンジしていると、多少の失敗は許容するしかない。難しいからといって安易な道を選ぶよりはいい。
+まぁ、特に趣味の場合、時間はあるのだし。
