--- a/shared/voice/training/ボイストレーニング.md
+++ b/shared/voice/training/ボイストレーニング.md
@@ -65,3 +65,7 @@ A4とかの国際表記で説明してない講師はちょっと怪しい。hiA
 体を鍛えて声を良くしていくのは時間がかかる。
 
 基礎練習は筋トレや声を出さずに息だけの練習もあるので朝早くとか夜遅くでもできる。
+
+1日に長時間声を出していると喉を壊しやすいので、毎日短時間ずつでも練習するのが大事。しっかり声を出すのは1-2時間に抑えたほうがいい。
+
+大きな声を出せるカラオケやスタジオで練習する日はそこで集中して練習する。
