--- a/shared/family/children/親子.md
+++ b/shared/family/children/親子.md
@@ -7,3 +7,5 @@
 親の仕事は子供の衣食住を養うのと、教育を行うこと。特に道徳や礼儀。
 
 子から借りたら倍返し。弟子や部下も。
+
+子どもが多くて育児や抱卵をしない動物ほど親と子でいうと親が生き残った方がまたたくさん子どもが生めるので見捨てやすい。逆に育児や抱卵に手間がかかるほど子どもを必死で守る。
