--- a/shared/help/痛み.md
+++ b/shared/help/痛み.md
@@ -51,3 +51,5 @@
 ただ、虫歯治療の麻酔のように、痛みの原因がわかったなら治療の際に痛みを抑えてもいい。
 
 痛みに耐えられるなら、最善の道を選ばなくてもいい。
+
+痛みはそれを予測して逃げるためにあるので、痛みを予測できなかったり、痛みがあるのに逃げなかったりするのは生物として劣っている。
