--- a/shared/life/死.md
+++ b/shared/life/死.md
@@ -39,3 +39,5 @@ https://x.com/badassceo/status/1111934061788852224
 「人はなぜ死ななければならないと思う？」『亜人』
 
 死を恐れて逃げるばかりではダメ。抗う。逃げないけど、死なないようにする。死はどうせどこかで来るので恐れない。
+
+もし死後も体に意識が残り続けるのであれば、綺麗なうちにさっさと焼いてやるのが情というものだ。
