--- a/shared/management/マネジメント.md
+++ b/shared/management/マネジメント.md
@@ -426,3 +426,5 @@ maintenanceやfinanceも含む。
 マネジメントにとって資源の配分は手段でしかない。効果を最適化するのがマネジメント。
 
 マネジメントは本番に最も強い瞬間を持ってこないといけない。必死に練習しても故障してはいけないし、故障しなくても弱くてはいけない。
+
+マネジメントは楽そうに見えてないなら失敗している。失敗したマネジメントはやたらとマネジメントが働かないといけない。準備は済んでいて、少し指示するだけで順調に進むのが良いマネジメント。
