--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -107,3 +107,5 @@ Know 知る
 「危険は避けられない。重要なのは、有意義な危険を冒せるかだ！」『亜人』
 
 「他人を理由に辞めるのは許さねえぞ！」『青のオーケストラ』
+
+「XXには代償が必要」なのではなく、「代償には対価が必要」なのだ。関係が逆。対価がないなら代償を払う必要もない。
