--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -135,3 +135,5 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 エンタメを考えるなら、主人公が判断を間違えた上で、なんとか取り返す、という流れが大事。
 
 ストーリーは結末よりも経緯が重要。まぁ、結末があまりにも悪いと後味悪いけど。
+
+序盤に強い敵に負けて見逃されるのは主人公がさらに強くなろうとする簡単な理由づけになる。
