--- a/shared/war/武器.md
+++ b/shared/war/武器.md
@@ -8,3 +8,5 @@
 まずは実戦で使えるレベルまで洗練しないといけない。実戦レベルの武器をたくさん持つ。
 
 武器は奪取されることも考えて使わないといけない。
+
+槍は引く時間を短くするのが重要。突く速度もあるけど、まずは突く距離を短くする。腕を伸ばし切らない。相手に刺さる分だけ突けば十分。
