--- a/shared/dance/ダンス.md
+++ b/shared/dance/ダンス.md
@@ -5,3 +5,5 @@
 また、複雑な動作を複数の単純な動作にバラしてそれぞれ練習する。
 
 「人って感情が高ぶるとうまく喋れなくなる。自然と言葉じゃなくて身体表現が出る。で・・・変なこと言うけど、それこそがダンスなんじゃないかって、私は思ってる。」『ワンダンス』
+
+ダンスは鳴っている音を全て捉えるのが基本。まずバスドラム、次にハイハット、最後にメロディーやボーカルなどの上物。
