--- a/shared/music/tips/リズム感を鍛える.md
+++ b/shared/music/tips/リズム感を鍛える.md
@@ -104,3 +104,5 @@ BPM 60に慣れたら90, 120と増やしていく。
 
 最近の曲を考えると、BPM 140までは裏拍まで取れるようにしたい。FAKE TYPE.やGigaの曲がそのくらい。
 ファタールや踊り子なんかは160くらいある。
+
+首、胸、腰でリズムに乗る練習はダンスや歌でも使える。
