--- a/shared/human/body/muscle/筋肉を動かす.md
+++ b/shared/human/body/muscle/筋肉を動かす.md
@@ -10,3 +10,5 @@
 筋肉は一度力を抜いてから力を入れる方が瞬発的に動きやすい。
 
 筋肉を動かす時、最初は勢いをつけて動かしていい。というかそうしないと動かない。ただ、勢いをつけると痛めやすいので慎重に少しずつ鍛える。効率的に鍛えるのは勢いをつけなくても動かせるようになってからでいい。
+
+筋肉で生まれる力はまず大きな筋肉、体幹や太ももから生まれるようにしないと速度が合わない。中央から末端に送って、末端ではそれに末端の力を乗せて使わないとスムーズに運用できない。
