--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -156,3 +156,5 @@ Lose-WinをLose-Loseに持ち込む。
 戦争には常にリスクがある。アメリカもベトナム戦争で負けるとは思っていなかっただろうし、ナチスドイツもソ連が参戦してくるとは思っていなかっただろう。
 
 戦場に善悪はない。ただ勝敗だけがある。
+
+戦争が終わったら、論功行賞もうまくいかないと次は内乱が起きる。それも含めて、戦争は面倒だ。
