--- a/shared/war/戦争の目的.md
+++ b/shared/war/戦争の目的.md
@@ -1,6 +1,13 @@
 戦争の目的は、相手に恐怖を与えること。
 Lose-WinをLose-Loseにすること。
+力を示すこと。
+結果的に、戦いをなくすこと。
 
 卑怯な手が正しくないのは、力を示して相手に恐怖を与えられないから。
 戦争の本質は、勝つことではなく、相手に恐怖を与えること。もう関わりたくないと思わせること。
 卑怯な手を使う雑魚だと思われれば、別の機会にまた狙われるだけだ。
+
+相手に恐怖を与えた後まで追撃しすぎると、恐怖を超えて必死で反撃してくる。恐怖を与えたら追撃しすぎない。
+
+むしろ自分が弱者の場合、力を示す前段階として暗殺などを用いて力の差を埋めることもある。
+この場合は卑怯な手でも何でも使う。最終的に恐怖を与えられるなら過程は問わない。
