--- a/shared/government/military/徴兵.md
+++ b/shared/government/military/徴兵.md
@@ -2,3 +2,9 @@
 ただ、生産活動や生殖活動が止まってしまうと継戦能力が損なわれるので、本当に最後の手段。
 
 https://x.com/kumasan903kuma/status/1947154760710459767?s=12
+
+徴兵された兵は弱い。
+ただ、国民が戦力として満遍なく武器が使えるようにしておくために徴兵して鍛えておくのは意味がある。戦場にそのまま持っていくことはできないが、その中から志願兵が出れば素人よりも戦力になる。つまり、徴兵制は戦時でなく平時のための制度。
+
+戦場以外の補助要員として徴兵する場合は使える。
+兵站の輸送であったり、雑用であったり、戦場以外では十分に使える。
