--- a/shared/music/vocal/training/tips/歌のリズムを取る.md
+++ b/shared/music/vocal/training/tips/歌のリズムを取る.md
@@ -77,3 +77,8 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 体でリズムをとって、体のリズムで息を吐いて、その息でしか声を出さなければ、勝手にリズムが取れる。
 
 「起こり」があるとリズムは取りやすい。
+
+歌のリズムは呼吸が全て。あとは声を呼吸に乗せて自然に発声するだけ。
+
+まずは一定の呼気で単調に歌う練習をする。アクセントをつけない。アクセントの位置は呼吸が弱くて原曲よりも少しフラットになるはず。何ならメロディーも一定でいい。
+これができないと喉で不自然に息をコントロールしてしまって、リズムがずれやすい。
