--- a/games/Pawapro/2024/栄冠ナインのイベント.md
+++ b/games/Pawapro/2024/栄冠ナインのイベント.md
@@ -20,10 +20,9 @@
 - マッスラー: 重い球、ノビ（投手のみ）
 - 変化球研究: キレ、威圧感、奪三振（投手のみ）
 
-以下は捨てる。
+これ以外は捨てる。
 
-- スタミナ系
-- ストレッチ
+合宿は特訓より特殊能力獲得率が低いので、投手や捕手の一点狙いよりはチーム全体が強くなるカードが強い。
 
 ## 特訓
 
