--- a/shared/love/communication/笑顔.md
+++ b/shared/love/communication/笑顔.md
@@ -7,3 +7,5 @@
 笑ってはいても、笑いながら喋ると聞き取りづらいので、笑ってから喋る。
 
 意識的に笑顔を向けたりしていると無意識の時に無表情になってしまうのでできれば無意識にできるといい。まぁ、繰り返していればいずれ習慣になるだろう。
+
+歯を見せる行為は基本的に威嚇。特に人間以外の動物に対しては歯を見せない。
