--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -335,6 +335,12 @@ DR 2MP-HP, 強ニーは中央の初期位置あたりからでも端まで持っ
 - {端} 6MP(+4), 2MP, CR 4HP, CR(6-9F遅) HK, 4HP, 強ニー, 中アッパー, SA3: 5805
 - {端} 6MP(+4), 2MP, CR 4HP, CR HP, 4HP, 強ニー, 中アッパー, SA3: 5746
 
+## 6MP(+5)
+
+- 6MP(+5), 4HP, 強ニー, 弱アッパー: 3310
+- 6MP(+5), 4HP, 強ニー, ODアッパー: 3660
+- 6MP(+5), 4HP, 強ニー, 弱アッパー, SA3: 5310
+
 ## 6LK(+1)
 
 - 6LK(+1), 2LP, LP, 中アッパー: 1790
