--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -69,6 +69,22 @@
       - MP(+2)(g)
   - MP(h), 2MP
 
+### 中攻撃のコンボ
+
+- MP(h), LP, 中アッパー
+  - DR 6LK, ...
+- MP(g), LP
+  - ガード
+  - 弱ショット
+  - 2MP, 弱ショット
+
+### ラッシュ攻撃のコンボ
+
+- DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
+- DR MP(g)
+  - MP, MP, 2MP
+  - 投げ: 少し遅らせないと空振りになる
+
 ### ジャンプ攻撃のコンボ
 
 - J.HP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
