--- a/games/Street-Fighter/Six/characters/Marisa/マリーザの対策.md
+++ b/games/Street-Fighter/Six/characters/Marisa/マリーザの対策.md
@@ -52,3 +52,8 @@ https://youtu.be/bFTTlhxbMDc?si=ARTSmR4fnFeFRBZ0
 2hit技を重ねるとスクトゥムを咎められる。
 
 マリーザ戦はとにかく投げを中心に攻める。投げにいけない場合は下段が次点。
+
+溜めグラディウスは手が光るタイミングとか、わかりやすい目印でジャスパを狙う練習をする。
+
+MP-MP, 溜めグラディウスをジャストパリィする練習は必要。
+溜め無しの場合は-5なので確反か、確反が届かないキャラは中足などを当てるのが基本。
