--- a/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
@@ -22,6 +22,12 @@ OD上弾を重ねるとODスクトゥムも割れる。
 
 ファランクスは上弾を抜けられない。
 
+グラディウスをガードしたあとはLPが届かない。ボタンを押すなら2MKを押す。
+
+MP-MP, グラディウスは溜めの有無に対して、遅らせ2LP, 弱アッパーを仕込むとどちらにも対応できる。
+
+グラディウスのジャストパリィ後は6HK(pc), 4HP, 強ニー, 弱アッパーが最大。
+
 ## 本田
 
 頭突きを2MP, ODネクサスや2MP-HKで止めるとリターンが高い。
