--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -35,17 +35,81 @@
 
 ## 初級
 
+### ラッシュ攻撃のヒット確認
+
+- DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
+- DR MP(g)
+  - MP, MP, 2MP
+  - 投げ: 少し遅らせないと空振りになる
+
+### ステローのヒット確認
+
+（カウンター: ランダム、パニカンなし）
+
+- 6LK(c), LP, 中アッパー
+  - DR 6LK(h), 2MP, 強アッパー
+    - DR 6LK, ...
+  - DR 6LK(g), 2LP, LP, 弱ショット, ガード
+- 6LK(h), LP, 弱ショット, ガード
+- 6LK(g), ガード
+
 ### リターンの高い対空
 
 （対空練習）
 
+- {空} 4HP, 強アッパー-h, SA3
+  - 6HK, 2MP, ...
 - {空} 4HP, 強アッパー-h
-  - SA3
-  - 強ショット
+  - 強ショット, ガード
 
 自分が技を出してない時に狙う、リターンの高い対空。
 
 ラッシュやSAが漏れないように練習する。
+
+### 中攻撃のヒット確認
+
+（反撃設定 > ガードリバーサル: 4F技）
+
+- MP(h), LP, 中アッパー
+  - DR 6LK, ...
+- MP(g)
+  - MP(c), 2MP, 強アッパー
+    - DR 6LK, ...
+  - MP(h/g)
+    - 2MP, 弱ショット
+    - 後退
+
+### 昇竜やSAの確反
+
+（確定反撃の練習）
+
+- 6HK(pc), 4HP, 強ニー, 弱アッパー, SA3
+
+### インパクト返しのコンボ
+
+（ドライブインパクトへの対応練習）
+
+- DI(pc), ステップ, 4HP, 強アッパー-h, 強ショット
+
+### 壁インパクトのコンボ
+
+- {近} DI(壁), 4HP, 強アッパー-h, SA3
+- {遠} DI(壁), ステップ, 4HP, 強アッパー-h, SA3
+
+端から2本目の太い線を両キャラが踏むくらいの距離だと4HPが届かないのでステップが必要。
+状態を保存して繰り返し練習する。
+
+## 中級
+
+### ジャンプ攻撃のコンボ
+
+- J.HP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
+- J.HP(g)
+  - HK, 中ネクサス
+    - マイト(h), 前投げ
+    - マイト(g), ガード
+
+端ではラッシュしなくても4HPが入る。
 
 ### 端の攻め (Cのみ)
 
@@ -69,58 +133,16 @@
       - MP(+2)(g)
   - MP(h), 2MP
 
-### 中攻撃のコンボ
-
-- MP(h), LP, 中アッパー
-  - DR 6LK, ...
-- MP(g), LP
-  - ガード
-  - 弱ショット
-  - 2MP, 弱ショット
-
-### ラッシュ攻撃のコンボ
-
-- DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
-- DR MP(g)
-  - MP, MP, 2MP
-  - 投げ: 少し遅らせないと空振りになる
-
-### ジャンプ攻撃のコンボ
-
-- J.HP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
-- J.HP(g)
-  - HK, 中ネクサス
-    - マイト(h), 前投げ
-    - マイト(g), ガード
-
-端ではラッシュしなくても4HPが入る。
-
-### 昇竜やSAの確反
-
-（確定反撃の練習）
-
-- 6HK(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
-- {端} 6HK(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h, SA3
-
-### インパクト返しのコンボ
-
-（ドライブインパクトへの対応練習）
-
-- DI(pc), ステップ, 4HP, 強アッパー-h, 強ショット
-
-### 壁インパクトのコンボ
-
-- {近} DI(壁), 4HP, 強アッパー-h, SA3
-- {遠} DI(壁), ステップ, 4HP, 強アッパー-h, SA3
-
-端から2本目の太い線を両キャラが踏むくらいの距離だと4HPが届かないのでステップが必要。
-状態を保存して繰り返し練習する。
-
-## 中級
-
 ### 端の投げループ
 
-- {端} 前投げ, DR 前投げ, ...
+- {端} 前投げ
+  - DR 前投げ, ...
+
+### 端の前投げからの攻め
+
+- 中ネクサス(h)-ノヴァ, 4HP, 強ニー, 弱アッパー
+- 中ネクサス(g)-マイト/グリード, ...
+- 中ネクサス(g), ガード
 
 ### 端のMP持続当てループ
 
@@ -207,16 +229,6 @@
   - MP
     - {ヒット/相打ち}, 2MP, 強アッパー, ...
     - {ガード}, LP, ガード
-
-### 6LKのヒット確認
-
-（カウンター: ランダム、パニカンなし）
-
-- 6LK(c), LP, 中アッパー
-  - DR 6LK(h), 2MP, 強ニー, DR 6LK, ...
-  - DR 6LK(g), 2LP, 2MP, 弱ショット, ガード
-- 6LK(h), LP, 弱ショット, ガード
-- 6LK(g), ガード
 
 ### BOさせた状態の削り
 
