--- a/games/Street-Fighter/Six/tips/モダンかクラシックか.md
+++ b/games/Street-Fighter/Six/tips/モダンかクラシックか.md
@@ -1,7 +1,22 @@
+## モダンでも強いキャラ
+
+- ケン
+- ルーク
+- ラシード
+- ベガ
+- リリー
+- 本田
+- ジュリ
+- キンバリー
+- ザンギエフ
+- 春麗
+- 舞
+- ED
+
+## その他
+
 クラシックは別にモダンの上位互換ではない。
 ただ、キャラによっては明らかにモダンが弱いキャラもいる。豪鬼とかガイルとか。特に中段がないとか発生の早い技がないとか立ち回りで困るキャラは厳しい。
-
-ルーク、ラシード、ベガ、リリー、本田、ジュリ、キンバリー、あたりはモダンでも全然困らない。技が欠けていてもあまり影響しない。
 
 モダンとクラシックは別のキャラとして考える。
 「クラシックにはこれがあるのに」よりも「モダンだからこの試合が取れた」を増やしていかないといけない。モダンを使うならモダンの強みを全力で生かす。
@@ -11,3 +26,7 @@
 
 スト6でクラシック操作を使うなら、「なぜモダン操作でコマンド入力ではダメなのか？」に答えられないといけない。
 たとえば、「使いたい技がないから」とか「AUTOとの同時押しが難しいから」とか。
+
+リリーや本田はなんならモダンの方が強いとも言われている。基本的な性能差が小さいとワンボタン無敵技の分だけモダンが強い。
+
+溜めキャラはあまりモダンにする意味がない。
