--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -158,3 +158,7 @@ Lose-WinをLose-Loseに持ち込む。
 戦場に善悪はない。ただ勝敗だけがある。
 
 戦争が終わったら、論功行賞もうまくいかないと次は内乱が起きる。それも含めて、戦争は面倒だ。
+
+生き延びるためには、相手に恐怖を与えなければならない。
+
+戦争とゲームの違いは、べつに負けてもいいところ。恐怖を与えられるなら、負けてもいい。毒を持った生き物が食べられることでいずれ警戒して食べられなくなるのと同じ。
