--- a/shared/war/戦争の目的.md
+++ b/shared/war/戦争の目的.md
@@ -1,4 +1,6 @@
-戦争の目的は、相手に恐怖を与えること。
+戦争の目的は、「もう戦いたくない」と思わせること。
+
+そのために、相手に恐怖を与えること。
 Lose-WinをLose-Loseにすること。
 力を示すこと。
 結果的に、戦いをなくすこと。
@@ -11,3 +13,5 @@ Lose-WinをLose-Loseにすること。
 
 むしろ自分が弱者の場合、力を示す前段階として暗殺などを用いて力の差を埋めることもある。
 この場合は卑怯な手でも何でも使う。最終的に恐怖を与えられるなら過程は問わない。
+
+怖くても戦わないといけないと思ったら、戦おうとする。やりすぎてはいけない。「逃げれば追ってこない」と思わせるのがちょうどいい。
