--- a/games/Pawapro/2024/栄冠ナイン.md
+++ b/games/Pawapro/2024/栄冠ナイン.md
@@ -363,6 +363,9 @@ Cあると大きく崩れることがかなり減る感覚。
 栄冠ナインは転がせが強いので、内野安打の青特が強い。あとそこからの盗塁とバント。
 あとは全体バフのムード、投手のスタミナを削る威圧感、単純にヒットになりやすくなるアベヒ、流し打ち、打球速度が上がる広角打法、単純なバフのチャンス、対エース、窮地、粘り打ち、など。
 
+肩力や捕球はまずボールに追いつけないと意味がない。走力や守備が優先。
+捕手、ファースト、サードはあまり動かないので走力や守備がなくてもいい。
+
 ### 試合で得られる経験値
 
 都道府県によって地方大会の試合数が違う。
