--- a/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
@@ -1,7 +1,11 @@
 ## ニー
 
+しゃがんでガードすると有利を取られるので、見てから立つか、インパクトを合わせる。
+
 連携の締めにニーを混ぜてくる場合は立ちガードから確反を狙う。OD以外がめり込んだら5F以上はある。
 当たり方で下りで当たったか上りで当たったか判別できるようにするのも大事。
+
+弱/中ニーギリギリの間合いでバクステを置いておくと空振りを誘うことがある。
 
 ## ショット
 
