--- a/games/Street-Fighter/Six/tips/モダンかクラシックか.md
+++ b/games/Street-Fighter/Six/tips/モダンかクラシックか.md
@@ -13,6 +13,14 @@
 - 舞
 - ED
 
+## モダンでも強いキャラの特徴
+
+- 致命的な技が欠けていない
+- SA1/2に無敵がある
+- 無敵技を弾抜けに使える
+
+Mで欠けると致命的な技は、コンボでダメージが落ちすぎる技（特に5Fの確反、Dリバの確反で使う技）がまず一番で、差し合いや攻めで使う技もできれば欠けてほしくない。
+
 ## その他
 
 クラシックは別にモダンの上位互換ではない。
