--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -109,3 +109,6 @@ Know 知る
 「他人を理由に辞めるのは許さねえぞ！」『青のオーケストラ』
 
 「XXには代償が必要」なのではなく、「代償には対価が必要」なのだ。関係が逆。対価がないなら代償を払う必要もない。
+
+トロッコ問題は「介入」の問題。放っておけば5人が死ぬが、自分が介入して助けようとすると別の1人が死ぬ。あるいは1人を殺すと言ってもいいかも。
+つまり、1人を殺して5人を助けるか、5人死ぬのを放っておくか、の二択。
