--- a/apps/Google/YouTube/プレイリストの作り方.md
+++ b/apps/Google/YouTube/プレイリストの作り方.md
@@ -5,13 +5,15 @@
 
 プレイリストを整理する要素:
 
+- 再生時間の長さ
 - 動画を見るか、音声を聴くだけでもいいかどうか
 - 一部を見逃してもいいかどうか
 - スキップなど、操作しながら見るかどうか
 - 1倍速で見るかどうか
-- 覚えたいかどうか
+- 覚えたいかどうか、流し見するかどうか
 - 利用する場面（リラックスしたい、作業中に流したい、など）
 - トピック（料理、運動、など）
+- 連続して流すか、ループして流すか
 
 プレイリストはできるだけ連続再生で見れるように分けると使いやすい。
 
@@ -24,3 +26,5 @@
 - 睡眠・癒し
 
 あまり細かく分けると整理が面倒なので、場面ごとに連続再生で使う分と、いくつかの特別関心があるトピックを分けるくらいでいい。
+
+プレイリストの分け方として、再生時間が長いか短いか、連続して流すかループして流すか、倍速で流すか準速で流すか、流し見かよく見るか、どんな時に見たいか、とか。
