--- a/games/Street-Fighter/Six/practice/初心者向け.md
+++ b/games/Street-Fighter/Six/practice/初心者向け.md
@@ -5,6 +5,9 @@
 ここまでできたらあとは攻めが通る限り転ばせて、ダメだったら退くだけ。
 流れの中にあるコンボやセットプレイをミスしないように練習する。
 
+まずは中央でもループする起き攻めをジャンプ攻撃から始めるのが基本かも。
+たとえばブランカだったら中アシストの弱バチカ締めからサプフォでまた中アシストを重ねる。
+
 ## 守りの初歩
 
 ガードして切り返しは守りの基本だけど、実際は難しい。状況に合わせて対応しないといけない。
