--- a/shared/government/legal/基本的人権.md
+++ b/shared/government/legal/基本的人権.md
@@ -13,3 +13,5 @@
 
 国は冤罪で犯罪者にすることもできるので、憲法で犯罪者の人権をある程度確保しておいた方が全体にとってはいい。
 ただ、個人レベルでは犯罪者は人ではないと考えていても別にいい。
+
+人権は国というよりも周りの人から与えられるものなので、民主主義の国は人権を守らないといけない。まぁ、人権を守るというのは、人権に反した処理をしないだけで何か優遇する必要はない。
