--- a/shared/society/社会的な性別.md
+++ b/shared/society/社会的な性別.md
@@ -13,3 +13,5 @@ man/woman.
 
 心に棒があってもいいし、穴があってもいい。
 でもそれで特別扱いされたいと思ってはいけない。
+
+ジェンダーというか、自分の性別が一致しないように感じるのは単に譫妄の一種。治したかったら精神病院に入って、そうでないなら気にせず過ごすべきだ。
