--- a/shared/lifestyle/meal/food/冷凍の限界.md
+++ b/shared/lifestyle/meal/food/冷凍の限界.md
@@ -1,3 +1,6 @@
 肉や魚は冷凍して1ヶ月くらいで食べ切りたい。
 
 コーンやモナカのアイスは長く置くとしけてくるので、早めに食べる。
+
+冷凍の肉を使うなら、まとめて調理してから分けたほうが楽。豚バラブロックをチャーシューにしとくとか。
+バラ冷凍もあるけど少し高かったり売ってなかったりする。
