--- a/shared/voice/training/tips/喉を上げる.md
+++ b/shared/voice/training/tips/喉を上げる.md
@@ -3,3 +3,5 @@
 喉の上がった硬い声を鼻声や裏声で柔らかくした声の出し方は女性の出し方に近い。まぁ、そういう出し方もあるけど、その人のフルスペックを使った声ではない。
 
 舌を上げて浅い位置で発音すると美空ひばりの軽い声みたいになる。喉も上がってる。
+
+無理に喉を上げて軽い声にしようとすると響きのバランスが悪くなりやすい。
