--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -7,7 +7,7 @@
 相手のSAが1までなら弾を重ねるのも強い。
 中ショットになるので最速しゃがみ攻撃暴れには負けるけど、基本的に中段との択になる。
 
-## 初手の攻め
+## 開幕の攻め
 
 初期位置からはDR 2MPとDR 強ネクサスの択が届く。
 
@@ -77,3 +77,5 @@ BO中は特にOD上ショットを削りで使っていくのが大事。
 
 翔サガットは中央だとネクサス当たってもノヴァガードさせてる。
 ただ、わざわざノヴァに当たるタイミングで暴れる人はまずいないので、別にグリードとマイトでいい気もする。投げと後退の択があるのが強みか。
+
+中央ではMPをそのまま重ねるよりもラッシュしたほうがいい。ただ、シミーできる場面では別。
