--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -131,12 +131,18 @@
 
 ## 対空
 
+- HK
+- 4HP, 強アッパー-h
+- 弱アッパー
+
+通常投げにはHKを仕込んでおくと、相手がジャンプした場合に狩れる。
+
 4HPや6HKから火力を出しつつラインを上げたい。
 ちまちまアッパーを当てるより3倍のリターンがある。
 
 安定は弱アッパーだけど、短いので空ジャンプに注意。当てた後の状況はいい。
 
-HKには対空無敵がある。
+HKには対空無敵がある。発生すれば腰くらいの位置で当たっても勝てる。めくりにも悪くない。
 遠めならHK(2), 中ショットで無敵技でも-7くらいなので、ほぼ安定。
 
 ## 弾抜け
