--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -145,6 +145,8 @@
 HKには対空無敵がある。発生すれば腰くらいの位置で当たっても勝てる。めくりにも悪くない。
 遠めならHK(2), 中ショットで無敵技でも-7くらいなので、ほぼ安定。
 
+基本的にはHKの方がいいかも。投げには仕込むつもりでいいし、ワンボタンだし。後ろ入力しないように気をつける。アッパーだと短い。
+
 ## 弾抜け
 
 ニーは弾抜けにも使えるけど、狙うのは難しい。姿勢で抜ける。ニーを出した時に相手が弾を撃っていたらたまたま抜けられるくらい。
