--- a/shared/culture/伝統.md
+++ b/shared/culture/伝統.md
@@ -13,3 +13,9 @@
 新しく生まれた文化をその時限りの「流行」として終わらせるのか、長く続く「伝統」として残すのかは、その組織にとって重要な判断になる。雑に全てを流行として終わらせていいわけではない。上司は常に広く見て、残すべき文化が生まれたら保護しないといけない。
 
 伝統や古いものが必ずしも悪いものとは言えないが、古くて「ダサい」ものは長続きしない。
+
+伝統を残すには秩序が必要。秩序のある文化しか残らない。形が必要。
+
+新入りがちょいとつついたくらいで壊れる伝統なんてのは大したことがない。
+
+浅い流行はいくらでもあるが、その中でも一握りの流行が伝統になる。
