--- a/shared/decision/判断基準.md
+++ b/shared/decision/判断基準.md
@@ -6,3 +6,5 @@
 - 死ぬかどうか
 
 「より楽しい」を判断の重要な指標に据える。夢中になれることを優先する。これがより手間や時間をかけることにもつながる。
+
+たまに他人からの評価を得て、自分の判断基準もアップデートしていく。このとき同じ人の評判ばかりではダメ。いろんな人の評価を聞いたほうが役に立つ。
