--- a/shared/story/telling/acting/演技.md
+++ b/shared/story/telling/acting/演技.md
@@ -4,3 +4,9 @@ Acting
 ロールプレイで特定の役割をこなすのも演技と言える。
 
 一度圧をかけた後に「私があなたの考えを汲み取れなかったみたい」みたいに非を認めて、さらに「私はこんなに頑張ってるのに」みたいな被害者ヅラをすると毒親っぽい。
+
+演技のタイプ:
+
+- 完全に役のための器になる。
+- 役は演じるが、自分のものにしている。
+- どんな役でも自分のまま。
