--- a/shared/culture/文化の守り方.md
+++ b/shared/culture/文化の守り方.md
@@ -1,2 +1,5 @@
 教育が必要。
 教育というのは、文化を伝承すること。
+
+伝統を残すのは「和」だ。それぞれが無償で文化を伝えていく。後輩はそれに感謝して「和」を維持しないといけない。
+その上で、伝統が生き残れないと感じた後輩が新しい文化を作り始める。必ず「和」は乱れる。どこかで袂を分つのがお互いのためである。
