--- a/shared/education/tips/宗教.md
+++ b/shared/education/tips/宗教.md
@@ -32,3 +32,5 @@
 
 日本の宗教観の基礎になっているのは神道、仏教、儒教あたり。儒教は特に朱子学。
 三つとも世界や生命については言及してなくて、あと神もあまり考慮されない。どちらかというと人の意思を重視する。
+
+家族や組織と同じように、宗教も関係を維持するために努力を必要とする。能動的に関係を維持することそのものが重要。
