--- a/shared/perception/期待.md
+++ b/shared/perception/期待.md
@@ -48,3 +48,5 @@
 ただ、あえて悪いほうに期待するのは健全でない。
 
 「これが正しい」と思っていても、それをどのくらい他人に期待するかは人によって違う。
+
+「いいか、それは自惚れってエんだ。お客の期待を信じてねえんだからな。お客様が一人でも期待を寄せてくださってんなら、それを頭ごなしに否定しなさんな。」『昭和元禄落語心中』
