--- a/shared/art/expression/表現.md
+++ b/shared/art/expression/表現.md
@@ -43,3 +43,6 @@ expression もその一部ではある。
 同じ技術や素材を使っても表現によって印象が変わる。
 
 目の前にある同じ事象を歌詞にするだけでもさまざまな切り取り方、捉え方がある。表現の前に、切り取り方がつまらないとつまらない表現になる。まず視点、観点を面白くする。
+
+他人の表現をそのままなぞっても個性がない。歌なら自分が作った歌だと思って歌う。ダンスなら自分が作った振り付けだと思って踊る。
+逆に、個性を出さないバックコーラスやバックダンスでは同じ表現をなぞる。
