--- a/shared/culture/tips/文化を守る.md
+++ b/shared/culture/tips/文化を守る.md
@@ -3,3 +3,7 @@
 
 伝統を残すのは「和」だ。それぞれが無償で文化を伝えていく。後輩はそれに感謝して「和」を維持しないといけない。
 その上で、伝統が生き残れないと感じた後輩が新しい文化を作り始める。必ず「和」は乱れる。どこかで袂を分つのがお互いのためである。
+
+流行は守らなくていい。伝統でもないのに守りに入っても仕方ない。
+
+文化は間違って伝わることもある。伝統を重視するなら、厳密に伝承する人たちも必要。ただ、いくつかの伝統が混ざって新しい流行になる流れも社会全体としては必要。どこかで袂を分つ。お互いに邪魔はしない。
