--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -138,3 +138,5 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 見たことがないものを見るのが生きるってことかも。
 
 「何の為に生きるかを捜すのも「生きる」と云う事だ。」『修羅の紋』
+
+「生まれちまったらそれが定めさ。」『昭和元禄落語心中』
