--- a/shared/music/vocal/training/歌の基本.md
+++ b/shared/music/vocal/training/歌の基本.md
@@ -33,3 +33,5 @@ https://youtu.be/Q-nW_cP21Kg?si=oNWOOijeEqIjtweV
 
 まずは良い声でリズムとメロディを安定させるのが基本。
 ただ、技術的には基礎練習ばかりだと飽きやすいので楽しめるように工夫しないといけない。
+
+歌うだけで精一杯だと、「聴かせよう」とする段階になっていない。まずは曲を覚えて、あまり意識を向けなくても歌えるようにする。意識は表現やその場の空気に向ける。
