--- a/shared/study/teaching/誰かに教える.md
+++ b/shared/study/teaching/誰かに教える.md
@@ -1,1 +1,3 @@
 何かを教えるときは専門用語をいきなり教えるのではなくて、まず概念を教えてから名前を教える。名前は分類のためにあるので、何もないところで名前だけ教えても意味がない。最初と最後に両方置くのはあり。
+
+何かを教える時、「この先もこの分野を続けていく人」を優先するべき。
