--- a/shared/dance/ダンス.md
+++ b/shared/dance/ダンス.md
@@ -6,4 +6,6 @@
 
 「人って感情が高ぶるとうまく喋れなくなる。自然と言葉じゃなくて身体表現が出る。で・・・変なこと言うけど、それこそがダンスなんじゃないかって、私は思ってる。」『ワンダンス』
 
-ダンスは鳴っている音を全て捉えるのが基本。まずバスドラム、次にハイハット、最後にメロディーやボーカルなどの上物。
+ダンスは鳴っている音を全て捉えるのが基本。まずバスドラム（キック）、次にスネア、ハイハット、最後にメロディーやボーカルなどの上物。
+
+ダンスでもパフォーマンスの時間が決まっていると曲を編集して時間内に収める必要がある。
