--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -14,6 +14,8 @@
 
 中央ではどちらの受け身に対しても中ショットを重ねて、後方受け身からジャンプには対空する。
 
+投げがすかったときを見越してHKを仕込むと対空になる。ボタンだけ用意しておいて見てから押してもいける。タイミングによってはバックジャンプにも当たる。
+
 ## MP: 2-8
 
 - MP(c), 4HP/2MP, ...
@@ -219,3 +221,8 @@ MP(g)より少し近い。
     - 2LP, 2MP, 弱ショット: 離れて-5、2MPの前に長い5F技で割り込める
     - 2LP, 2MP, 弱ニー:
   - {端} MP(g), 後退(8F), 2LP, ODニー: 相手が小技を空振りしたら2LPが当たる
+
+## メモ
+
+中央でMPを重ねても後退であまり強くない。基本的にラッシュ。コンボも運び重視。
+端はとにかくMPを重ねておけばいい。基本的に投げとシミーもいける場面が多い。
