--- a/shared/music/vocal/training/tips/歌のリズムを取る.md
+++ b/shared/music/vocal/training/tips/歌のリズムを取る.md
@@ -82,3 +82,5 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 
 まずは一定の呼気で単調に歌う練習をする。アクセントをつけない。アクセントの位置は呼吸が弱くて原曲よりも少しフラットになるはず。何ならメロディーも一定でいい。
 これができないと喉で不自然に息をコントロールしてしまって、リズムがずれやすい。
+
+間奏中も体でリズムを取る。曲によってはフェイクを入れてもいい。同時に横隔膜の力を抜いて、下げ直す。リセットする。
