--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -67,11 +67,14 @@ BO中は特にOD上ショットを削りで使っていくのが大事。
 
 ## シミー
 
+- 後退, 4HP
 - バクステ, 2MP: 30Fぴったり
 
 歩きが遅いのでシミーしづらい。ただ、後退がシミーになる状況を作るパターンもわりとある。ド密着から下がるというよりは、少し離れた位置からシミーと投げを狙う。
 
 シミーは2MPが無難。バクステからも届く。ODネクかTC。ラッシュも楽ではある。余裕があれば2HP強ネク。
+
+シミーはできれば4HP(pc)にしたい。ちょっと短いけど、中ショットからラッシュでめっちゃ伸びる。溜めアッパーでもゲージ2本回復できて強い。
 
 ## メモ
 
