--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -224,6 +224,8 @@ HK(1), 強ノヴァは相手が空中でも使える。
 - 2MP(+4)-HP, CR MP, 4HP, 強ニー, 弱アッパー, SA3: 5325
 - {端} 2MP(+4)-HP, ODノヴァ, ODニー, 弱アッパー, SA3: 5410
 
+2MP(pc), 2MPでも同じ。
+
 ## 2HP
 
 - 2HP, 強アッパー: 2400
