--- a/shared/respect/empathy/共感を得る.md
+++ b/shared/respect/empathy/共感を得る.md
@@ -2,3 +2,9 @@
 
 ある程度は自分で伝えることもできるが、自分で伝えても否定させることがある。
 コミュ障とか人の話を聞かない人は共感以前の問題。
+
+悪口は共感しづらいというか、共感できても理性で控えることになりがち。共感できないことを伝えても社交的にはあまり意味がない。
+
+ただ情報を伝えるだけじゃなくて、共感を得る、あるいは説得する。
+
+共感を得るというのは、相手を動かすということ。
