--- a/shared/trust/intimacy/tips/挨拶.md
+++ b/shared/trust/intimacy/tips/挨拶.md
@@ -22,3 +22,5 @@
 会釈は目を合わせてから目線を切るためにすることが多いので、挨拶ではないのかも。
 
 挨拶は注意を引くためのステップ。まずは気づいてもらう。
+
+知り合ったばかりの人には会うたびに数回は自己紹介を繰り返した方がいい。名前で声をかけられるまでは覚えられてない前提。
