--- a/shared/execution/実行.md
+++ b/shared/execution/実行.md
@@ -30,3 +30,23 @@ action も execution の派生と考えられる。
 どのような問題があって、どのように進めるか。
 
 楽観的に構想して、悲観的に計画して、楽観的に実行する。
+
+[なぜ、あなたの仕事は終わらないのか スピードは最強の武器である | 中島聡](https://www.amazon.co.jp/dp/B01GPCKJWK)
+
+[「後回し」にしない技術 | イ・ミンギュ](https://www.amazon.co.jp/dp/B08R8K2VFX)
+
+「いつ終わるか」は「いつ始めるか」で決まる。
+早く終わりたかったら、できるだけ早く始められるように準備を整えて、すぐに始める。
+
+でも一番早いのは「始めない」とき。一生始めなければ 0 秒で終わる。
+
+「実行したい」
+「実行できる」
+の両方を満たしたタスクだけを順に実行する。
+実行（完了）できないのに始めても時間を無駄にするだけ。
+
+どうしたら「実行できる」と言えるか？
+
+始めるとか終えるとかは時間と切り離せない。
+
+実行というのは、何かを実現すること。
