--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -3,35 +3,43 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
-## 概要
+## 目次
 
-1. 対空: {空} 4HP
-2. 確反: 6HK(pc)
-3. 確反: DI(pc)
-4. DR 6LK/6MP
-5. 6LK(c)
-6. 2MP, CR MP, 4HP
-7. {端} MP, MP, LP, 中アッパー
-8. {BO} 2LP, MP, 2LP/2MP, 弱ニー
-9. {BO} 2MP, 強ニー
-10. 対空: {空} アッパー
-11. 飛び道具
-12. DI(壁)
-13. {端} 前投げ
-14. J.HP, HK, ...
-15. 強アッパー, DR 投げ
-16. {中央} 前投げ
-17. {端} 後投げ
-18. 2MP/2HP, 中/強ネクサス
-19. MK-HK
-20. HP-HK
-21. MP, LP, 中アッパー
-22. 確反: 2MP(pc)-HP
-23. 確反: {DV}, MP(pc)
-24. 2LP/2LK, LP, 中アッパー
-25. MP, LP, CR 2LP, 4HP
-26. MP, LP, CR 2LP, 2MP, CR MP, 4HP
-27. 対空: {空} 6HK
+1. 初級
+   1. 対空: {空} HK
+   2. 確反: DI(pc)
+   3. DR MP
+   4. {端} MP
+   5. {端} 前投げ, DR
+   6. J.HP
+   7. DI(壁)
+2. 中級
+   1. 対空: {空} 4HP
+   2. 確反: 6HK(pc)
+   3. 6LK
+   4. DR 6LK
+   5. DR 6MP
+   6. 2MP, CR MP
+   7. {BO} 2MP, 中ネクサス
+   8. {端} 前投げ, 中ネクサス
+3. 上級
+   1. 確反: {通常投げ}, 4HP(pc)
+   2. 確反: {DV}, MP(pc)
+   3. 2MP, CR 4HP
+   4. 強アッパー, DR 投げ
+   5. {中央} 前投げ/後投げ
+4. その他
+   1. 対空: {空} 弱アッパー
+   2. 確反: 2MP(pc)-HP
+   3. 飛び道具
+   4. 2MP/2HP, 中/強ネクサス
+   5. MK-HK
+   6. HP-HK
+   7. MP, LP, 中アッパー
+   8. 2LP/2LK, LP, 中アッパー
+   9. MP, LP, CR 2LP, 4HP
+   10. MP, LP, CR 2LP, 2MP, CR MP, 4HP
+   11. 対空: {空} 6HK
 
 ## 初級
 
