--- a/shared/leisure/examples/travel/草花の見頃.md
+++ b/shared/leisure/examples/travel/草花の見頃.md
@@ -1,16 +1,31 @@
 # 草花の見頃
 
-## Mar.
+記載している時期は東京が基準。春夏は暑いところ、秋冬は寒いところの方が通常早く咲く。
 
-つつじ
+実際の開花状況はその場所のSNSや公式サイトで公開されている開花状況やウェザーニュースなどを確認するといい。
 
-## Nov.
+## 春
 
-上旬
+- 椿: 3月
+- チューリップ: 3月下旬
+- 桜: 4月上旬
+- 菜の花: 4月上旬
+- つつじ（春）: 4月下旬
+- しゃくなげ: 4月下旬
+- ポピー: 4月下旬
+- バラ（春）: 5月
+- あじさい: 6月中旬
 
-薔薇 → 旧古河庭園
-菊
+## 秋
 
-下旬
+- コキア: 10月上旬
+- 彼岸花: 10月中旬
+- バラ（秋）: 10月下旬〜11月上旬
+- 菊: 11月上旬
+- ダリア: 10月下旬
+- もみじ: 11月下旬
 
-紅葉 → 六義園
+## 冬
+
+- いちょう: 12月上旬
+- メタセコイア: 12月上旬
