--- a/shared/leisure/examples/travel/草花の見頃.md
+++ b/shared/leisure/examples/travel/草花の見頃.md
@@ -18,11 +18,12 @@
 
 ## 秋
 
-- コキア: 10月上旬
+- コスモス（秋）: 9月下旬
+- コキア（赤）: 10月上旬
 - 彼岸花: 10月中旬
+- ダリア: 10月下旬
 - バラ（秋）: 10月下旬〜11月上旬
 - 菊: 11月上旬
-- ダリア: 10月下旬
 - もみじ: 11月下旬
 
 ## 冬
