--- a/shared/cooking/tips/肉を冷凍する.md
+++ b/shared/cooking/tips/肉を冷凍する.md
@@ -6,3 +6,5 @@
 丸ごとだと冷凍したまま鍋に入れて後で切るかそのまま食べることになるので面倒。
 
 すぐ食べるなら肉は調理してから冷凍でもいい。
+
+ブロック500gは冷蔵庫で解凍すると半日くらいじゃ溶けない。前日の夜から1日かけて解凍するくらいでいいかも。それか袋に密封して流水に浸ける。
