--- a/shared/lifestyle/meal/食事.md
+++ b/shared/lifestyle/meal/食事.md
@@ -34,3 +34,7 @@
 いろんな趣味の人がいたほうが飯の時も効率がいい。作るのも効率がいいし、食べるのも余り物が減って効率がいい。
 
 高級食材を食べるのを「情報を食べている」ということがある。
+
+蝋、ワックスは脂肪酸にアルコールが結合したもので、グリセリンが結合した脂と近い性質がある。
+ただ、酸化(加熱)や加水分解に強く、人体で分解できない。バラムツなどの蝋を多く含む食材を食べると分解されずにそのまま出てくるし、下痢になる。
+融点は脂より高く、気体は燃えやすい。
