--- a/shared/people/tips/人間の価値.md
+++ b/shared/people/tips/人間の価値.md
@@ -11,3 +11,7 @@
 当たり前だけど、自分の行いは自分の評価につながる。
 
 人間には価値がある。使い勝手のいい道具だし、経済を動かす歯車でもある。
+
+犯罪者なんて社会にとってはいない方がいいんだから、無駄に生かすのではなく使い潰してもいいのでは？
+
+犯罪者であっても人間にはとても高い価値がある。人体実験や奴隷労働をはじめ、趣味で弄ぶとか、臓器にも需要がある。犯罪者というだけでその価値を使わずに牢屋で囲って無駄にするのはもったいない。
