--- a/shared/war/敵を作らない.md
+++ b/shared/war/敵を作らない.md
@@ -30,3 +30,5 @@
 自分から敵を作って逃げるのは意味がわからない。それなら初めから敵を作るべきではない。
 
 敵になっても恨みを買ってはいけない。敵から手を出せないのが理想。恨みではなく、恐れを与える。
+
+恨みを買うつもりがなくても余波で恨みを買ってしまうことはある。敵を作ってしまったら仕方ないので戦うしかない。
