--- a/shared/game/theory/ルールを作る.md
+++ b/shared/game/theory/ルールを作る.md
@@ -6,3 +6,5 @@
 
 明示されたルールしか守らないとその場で作られた暗黙的な規律から追い出されて、ゲームとしても弱い。
 例えばカタンのようなゲームでも、周りと独自のルールを作って裏工作したほうが強い。ルールを守るだけでなく、作る側に回る。
+
+まず守りやすいルールが良いルール。
