--- a/shared/war/敵.md
+++ b/shared/war/敵.md
@@ -43,3 +43,5 @@ Lose-Winの関係をLose-Loseに引きずり込む。
 部族や組織の場合は殺すのが難しいので、できるだけ損害を与える。恨みを買う程度では足りない。恨みも持てないくらい後悔させるのが重要。
 
 敵を敬い、恐れよ。
+
+恨みを抱えたまま生きていく必要があるのは、その人を警戒しないといけないから。その人が死んだりして警戒する必要がなくなれば破棄してもいい。
