--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -190,3 +190,5 @@ SA1は発生が遅いので、相殺を狙っても負けがち。
 サガットは小技で2MPが届かなくなるくらいまで離せるともっと楽だったんだけど。
 
 上弾をしゃがんで差し返しを狙ってくる相手には単に下弾を撃つ。差し返しを狙ってたらジャンプして避けるのは無理。
+
+ニーにインパクトを狙ってくる相手には、弱ニーの手前落ちから返すのもあり。
