--- a/shared/execution/実行.md
+++ b/shared/execution/実行.md
@@ -13,10 +13,8 @@ action も execution の派生と考えられる。
 
 実行は計画を修正するためにあると言ってもいい。
 
-計画と実行は基本的にマネジメントの領域ではある。
+計画と実行は基本的にマネジメントの領域でもある。
 実行のためには資源が必要。
-
-実行は management の下でもいいかも。
 
 どれだけ計画を立てても実行しないとパフォーマンスにはならない。
 
@@ -47,6 +45,10 @@ action も execution の派生と考えられる。
 
 どうしたら「実行できる」と言えるか？
 
+正しく進められて、正しく終えられる、あるいは正しく止められること。
+
 始めるとか終えるとかは時間と切り離せない。
 
 実行というのは、何かを実現すること。
+
+テストやトライアルアンドエラーは実行の下でもいい。
