--- a/shared/game/genres/fighting/格闘ゲームのコントローラー.md
+++ b/shared/game/genres/fighting/格闘ゲームのコントローラー.md
@@ -17,3 +17,5 @@
 
 レバーレスというかキー入力の方向入力は、上下や左右のような逆方向の同時入力ができてしまう。自分でデバイスに最適化して、逆方向をしっかり離して入力できるように練習しないといけない。押すのと離すのとで二つの動作が必要。
 対してパッドやスティックは物理的に逆方向を同時入力できない。人間的に自然な動きで操作できる。
+
+レバーレスは「弾く」あるいは「引っかく」と呼ばれる、指先でボタンの端を引っかけて一瞬だけ入力する方法をよく使う。
