--- a/shared/knowledge/知識.md
+++ b/shared/knowledge/知識.md
@@ -168,3 +168,9 @@
 知識は体系化して、すぐ取り出せるようにしないと意味がない。
 
 知識がない人は手札が貧しくてワンパターンになりやすい。飽きられやすい。
+
+「なぎさんはなんでちょっと見ただけでわかるのかなぁ」
+「ずっと見てたからだよ」
+『瑠璃の宝石』
+
+経験や知識による判断や理解は、その前に何年もの知識の蓄積がある。
