--- a/shared/art/expression/皮肉.md
+++ b/shared/art/expression/皮肉.md
@@ -1,2 +1,5 @@
 皮肉は相手に同意するように見せるのが美しい。
 例えば「五本指ソックスを履くな」「たしかに、歯車に足の指なんて要らないですからね」みたいな。同意しているように見せて馬鹿にしている。
+
+「東京新聞さんはニュースとかご覧にならないと思うので仕方ないのですが」
+https://x.com/nalltama/status/1970480800182550856
