--- a/shared/leisure/examples/travel/草花の見頃.md
+++ b/shared/leisure/examples/travel/草花の見頃.md
@@ -14,7 +14,12 @@
 - しゃくなげ: 4月下旬
 - ポピー: 4月下旬
 - バラ（春）: 5月
+- ネモフィラ: 5月上旬
 - あじさい: 6月中旬
+
+## 夏
+
+- 睡蓮: 7月中旬から一月程度
 
 ## 秋
 
@@ -22,11 +27,11 @@
 - コキア（赤）: 10月上旬
 - 彼岸花: 10月中旬
 - ダリア: 10月下旬
-- バラ（秋）: 10月下旬〜11月上旬
+- バラ（秋）: 10月下旬から半月程度
 - 菊: 11月上旬
 - もみじ: 11月下旬
+- いちょう: 11月中旬から半月程度
 
 ## 冬
 
-- いちょう: 12月上旬
 - メタセコイア: 12月上旬
