--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -23,6 +23,8 @@
 
 ## 差し合いの基本
 
+当てたい技は発生が遅いので、まずはMK/2MP/2HP/2MKなどで相手の動きを止める。待ちを咎めてドライブゲージを削る。
+
 ステローやニーで触りにいって、嫌がったところに外から弾を当てたり2MPで差し返したりするのが基本。
 単にステローとニーだけでも相手は立つかしゃがむか悩むことになる。
 ただ、それだけではインパクトに弱いので、牽制で2MPや2HPも振っていくといい。あとは垂直とか。
