--- a/shared/care/responsibility/tips/責任感を示す.md
+++ b/shared/care/responsibility/tips/責任感を示す.md
@@ -7,3 +7,5 @@
 
 責任をとって辞職なんてのはなんの責任もとってない。批判から逃げているだけで、徹底的に追い詰めるべき。責任を取るというのは腹を切るということ。
 特に政治家が大臣を辞めるとか役職を辞めるのは本当に何の意味もない。せめて議員辞職するまでは追い詰めるべき。
+
+責任感とはエンゲージメントのことで、部下ではなく上司が考えるべきことだ。
