--- a/shared/care/遠慮.md
+++ b/shared/care/遠慮.md
@@ -47,3 +47,13 @@
 遠慮して断るより、もらっておいて後で返す方がいい。
 
 遠慮する人は、自分が我慢する自己犠牲の人というよりも、他人とコミュニケーションするのがめんどくさい人。
+
+配慮は、相手のために何かを「する」こと。
+遠慮は、相手のためという建前で、何かを「しない」こと。
+
+良い影響を与えるのが配慮、悪い影響を与えないのが遠慮。
+
+遠慮しない。配慮する。
+
+配慮は相手のため。
+遠慮は自分のため。
