--- a/games/Street-Fighter/Six/characters/Ryu/リュウの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの立ち回り.md
@@ -13,6 +13,9 @@
 6HPや強波掌は有利フレームが大きいけど、発生が遅いので当てるのが難しい。
 ガン待ちに負荷をかけようとしても発生が遅すぎて見てから止められる。
 
+リュウは発生の遅い技をいかに当てるかが大事。
+LP/MP/HPでうまく埋めるのがまず先で、隙をついて遅い6HPや波掌撃を狙う。
+
 ## 攻め
 
 起き攻めするよりは吹き飛ばす技が多い。
