--- a/games/Street-Fighter/Six/practice/スト6のコマンド入力.md
+++ b/games/Street-Fighter/Six/practice/スト6のコマンド入力.md
@@ -21,3 +21,8 @@
 
 前歩きした後は昇竜に化けやすい。
 236ではなく、41236にすると、前歩きからでも確実に波動コマンドが成立する。
+
+## 昇竜, 真空波動コマンド
+
+レバーレスの場合、コンボの昇竜は左向きなら2, 26, 24と入れると、続いて26, 24と入れることでSA3も出せる。右向きなら6, 26, 46, 26, 46になる。
+つまり、前を押したまま後、下と素早く押して離す。弾いてもいい。
