--- a/games/初心者におすすめのボードゲーム.md
+++ b/games/初心者におすすめのボードゲーム.md
@@ -2,6 +2,15 @@
 
 逆に、早い者勝ちみたいなゲームはちょっと入りづらい。
 
+## 定番
+
+- ババ抜き
+- 大富豪
+- 七並べ
+- UNO
+- 将棋
+- 麻雀
+
 ## パーティゲーム
 
 - あいうえバトル
@@ -13,6 +22,13 @@
 
 - インカの黄金
 - 海底探索
+
+## 正体隠匿
+
+- チーズはどこへ行った？
+- タイムボム
+
+タイムボムは正体隠匿だけど脱落がないので初心者でも入りやすい。
 
 ## その他
 
