--- a/shared/game/ゲームのジャンル.md
+++ b/shared/game/ゲームのジャンル.md
@@ -9,4 +9,12 @@
 - ホラー
 - 格闘
 - 推理
-- ギャンブル、チキンレース
+- ギャンブル
+
+- 正体隠匿
+- チキンレース
+- トリックテイキング
+- ワーカープレイスメント（ワカプレ）
+- デッキビルディング
+
+https://bodoge.hoobby.net/mechanics/1?srsltid=AfmBOoq9cMSkJtuc6YzsuDvS_5pcuJmiHQ747M7lF2aneuEXJVYTS3ve
