--- a/shared/care/responsibility/tips/奴隷.md
+++ b/shared/care/responsibility/tips/奴隷.md
@@ -7,3 +7,6 @@
 懲役刑はどう言い繕っても犯罪奴隷でしかない。
 
 懲役が奴隷である以上、「奴隷はいない」という建前には意味がない。
+
+児童労働がないのは裕福な国の贅沢であって、児童が農家などで働くのは普通のことだ。
+問題は人身売買とか、教育を受けていないことで貧困を脱しにくいこと。もっと言うと農家で裕福になれないこと。
