--- a/shared/cooking/tips/揚げる.md
+++ b/shared/cooking/tips/揚げる.md
@@ -5,3 +5,14 @@
 衣をつけたら、最初は衣が剥がれないように触らない。
 
 剥がれた衣はこまめに回収して、油が汚れないようにする。
+
+炒め物は少量の油で揚げる料理なので、本質的に揚げ物と同じく油の温度管理が大事。
+また、金属に接触するので焼きの面もある。
+
+炒め物や揚げ物では、火の強さというよりも油の温度で考える。
+
+油の量が少ないと揚げよりも焼きに近くなってしまう。
+
+揚げ物するなら小さくて深い鍋があった方がいい。
+
+炒めるのは揚げるのと同じ。
