--- a/shared/cooking/料理を左右する要素.md
+++ b/shared/cooking/料理を左右する要素.md
@@ -22,6 +22,8 @@
 塩は結局どこの塩でも塩だけど、粒の大きさで印象が変わるのでミルにはこだわってもいい。あと焼き塩は粒子が細かくなっていて溶けやすい。
 というか産地によって味が違ったら塩、塩化ナトリウムじゃない可能性がある。塩以外のミネラル。
 
+濃口醤油は塩分量16%くらいなので、塩の代わりに塩の分量の6.25倍入れたら同じくらい。その分水を減らす。
+
 ## 火加減
 
 加熱しすぎると水分量が減ってパサパサする。細胞が壊れて水分が流出している。味の成分も加熱によって壊れることがある。
