--- a/shared/collaboration/organization/tips/無能の扱い.md
+++ b/shared/collaboration/organization/tips/無能の扱い.md
@@ -53,3 +53,5 @@
 悪意のある敵より無能な味方が危ないのは「近い」から。離せば危険性は低くなる。前線に放り出して使い捨てる。
 
 無能だから殺すのではなく、有能さを見せられるように死ぬような最前線に送る。それで有能なら生かせばいいし、無能なら死ぬ。
+
+権力がある無能と争うのも、その下につくのも幸せになれない。殺すか、関わらないか。
