--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -177,3 +177,5 @@ https://diamond.jp/articles/-/49655
 
 組織の核は分業。
 活動をいくつかの器官に分担する。
+
+組織には無能を排除する仕組みが必要。定量的な競争。恣意的になると無能を排除できない。政治が入り込まないようにしないといけない。組織内の政治は無駄。
