--- a/shared/voice/training/基礎の発声.md
+++ b/shared/voice/training/基礎の発声.md
@@ -43,3 +43,5 @@
 食後に腹から声を出していると逆流性食道炎になりやすいので気をつけよう。喉だけでなく食道も守る。
 
 食後はゲップも出やすいので、配信や歌唱で声を出すなら2時間くらい空けたほうがいい。
+
+喉を開いて柔らかい声で歌うのが基礎にして奥義。息の強さや声の高さは後から鍛えればいい。
