--- a/shared/business/tips/商売.md
+++ b/shared/business/tips/商売.md
@@ -45,3 +45,6 @@ https://x.com/BuzzLogicCEO/status/1813015524546342978
 作った人も売った人も買った人も儲かるようにするのが商売だ。
 
 人の心を動かせないと金も動かせない。
+
+商人なら利を取るべき。
+ただし、目先の利益だけでなく、何年も先の利益を見ないといけない。違法な取引で捕まったり、恨みを買って殺されたりするのを利とは言えない。
