--- a/shared/technique/技術.md
+++ b/shared/technique/技術.md
@@ -151,3 +151,5 @@ engineeringは理論的。
 技とはアイデアである。
 
 技術はシンプルでいい。まずは身体の鍛錬から。特に思った通りに体を動かせるようにする。頭と体を一致させる。身体が変われば技術もまた変わる。身体ができてから技術を極めるのが効率的だ。
+
+技術を身につけることについてはartの下より独立したほうがいいかも。
