--- a/shared/music/vocal/training/歌の技術.md
+++ b/shared/music/vocal/training/歌の技術.md
@@ -4,6 +4,12 @@
 - 音の高さ
 - 音の長さ
 - 音の響きや重なり
+- 声帯を伸ばして柔らかく高い声を出す
+
+抑揚:
+
+- 声量のムラを抑える
+- メロディは抑えて、サビで盛り上げる
 
 音楽的な部分:
 
@@ -120,3 +126,27 @@ https://youtu.be/6Tp-eguoPJI?si=SNx252totGgfY4LU
 曲の精度を上げるにはまずリズムから。80くらいのテンポに落としてメトロノームでテンポをとりながら正確に練習する。あとは滑舌でテンポに追いつけなくなることもあるので、元のテンポで口が回らないところは重点的に練習する。リズムを正確にとりつつ、表現として走りや溜めの位置も検討する。
 
 歌い方の変化で曲に合わなくなることがある。まずは基礎を固めるので当面は仕方ない。慣れてきたら声色もコントロールできるようにする。
+
+歌のテクニックよりも前に基礎。
+声を出すということ、息を吸って吐くということから。
+
+表現を入れずに単調に歌う練習をするといい。
+コントロールされていない表現は不安定に聞こえて拙い。
+
+一瞬の音程のビブラートをこぶしという。演歌でよく使う。
+
+一瞬低い音を出してすぐ本来の音程に移行するのがしゃくり。狙って短く入れないとむしろ不安定に聞こえる。
+
+まずは音程の上下と音量の大小をゆっくりコントロールできるようにして、慣れてきたら早く切り替えられるようにする。
+音量なら徐々に大きくするのと小さくするのを繰り返したり、音程なら徐々に上げるのと下げるのを繰り返したり。
+
+声の高さは歌の上手い下手とは関係ない。
+単に声の違い。ただ、声域が狭いと歌える曲の範囲は狭まる。キーを変えないと歌えない曲があるとか、下にも広いとキーを変えても歌えない。
+
+歌が上手くなる以前に、良い声でシンプルに歌うのが重要。
+
+- 声のテンションの上げ下げ
+- 息の強さの上げ下げ
+- 一定のアクセント
+
+はまず基本。スムーズに。
