--- a/shared/computer/system/コンピュータシステム.md
+++ b/shared/computer/system/コンピュータシステム.md
@@ -6,3 +6,5 @@
 ただ、システム内の各サービスやアプリケーションの管理も含む。
 
 コンピュータが集まったネットワーク内で、各ノードが情報の変換と通信を繰り返すことでシステムとして動いている。
+
+ソフトウェアやアプリケーションだけでなく、ネットワークやハードウェアのことまで考える。まぁ、ハードウェアはクラウドなどで抽象化されることも多いけど、実際には個人の業務用PCからアクセスがあるし、後ろからモニターを見られてパスワードがバレるなどのアナログなセキュリティリスクもある。
