--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -45,7 +45,7 @@
 
 ## 野手共通
 
-- 打撃能力はまずDFCを目指す
+- 打撃能力はまずDFCかDDEを目指す
 - Gはすぐ消せるので、Fまでは上げたほうがいい
 - ミートがBになったら、パワーをCに上げたい
 - パワーがCになったら、弾道を2に上げたい
@@ -110,6 +110,11 @@
 
 対ストレートが結構強いと思ってる。「打つのが上手くなる」というのは、ゲーム的には打球速度が上がるらしい。ホームランも打ちやすくなる。
 
+基本的にはまず最低限の打撃能力が必要だけど、名門として安定させるなら守備能力も伸ばしたい。まぁ、最低ラインを越えたらあとは好み。
+セカンドとショートは最低限の打撃より守備優先でもいい。とはいえ、EEくらいは欲しい。
+
+走力を伸ばさないなら、最低限のミートを確保したあとはパワーが優先。それでもミートDかCくらいは欲しい。
+
 ## 捕手
 
 もっともボールに触る機会が多い野手。捕球は高めにしたい。
@@ -164,6 +169,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 - 守備重視
 - 走力と守備力の優先度が高い
+- 捕球の優先度が低い
 - 守備職人があると強い
 - 送球E以下はできれば避けたい
 
@@ -178,7 +184,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 - 打撃重視
 - 肩力の優先度が高い
-- 走力の優先度が低い
+- 走力、守備力、捕球の優先度が低い
 - 送球C以上にしたい
 - 送球E以下は避けたい
 
@@ -196,6 +202,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 - 守備重視
 - 走力、肩力、守備力の優先度が高い
+- 捕球の優先度が低い
 - 守備職人があると強い
 - 送球B以上があると強い
 - 送球E以下は避けたい
