--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -348,3 +348,5 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 
 難しいことにチャレンジしていると、多少の失敗は許容するしかない。難しいからといって安易な道を選ぶよりはいい。
 まぁ、特に趣味の場合、時間はあるのだし。
+
+- どんな練習に効果があったか
