--- a/shared/collaboration/organization/組織と個人.md
+++ b/shared/collaboration/organization/組織と個人.md
@@ -91,3 +91,7 @@
 組織としての能力は下に揃ってしまう。能力差があれば分離してお互いに影響しないようにするべき。
 
 組織の特色は個人から引き出される。組織も個人の集まりでしかない。
+
+個人は組織に勝てない。
+結局、組織もまた個人が集まったものなので、どんなに強力な個人でも、同じくらい強力な個人が所属する組織には勝てない。
+ただ、そのように強力な組織であっても、強力な個人であれば組員を削るくらいは容易にできる。あえて敵対するべきではない。
