--- a/shared/computer/software/development/ソフトウェア開発.md
+++ b/shared/computer/software/development/ソフトウェア開発.md
@@ -207,4 +207,6 @@ https://tech.willgate.co.jp/entry/2024/04/01/184252
 ソフトウェアはいきなりネット上の猛者が相手なので、ビジネスとして成立させるのが難しい。競合が多い。
 いきなりレベルの高いもの、あるいは今までになかったものを求められる。
 
-一人でも大きな仕事ができるけど、競合が強い。
+一人でも大きな仕事ができるけど、それでもやはり組織の方が強い。
+
+製品開発を知らないとソフトウェア開発もわからない。
