--- a/shared/system/structure/インタフェース.md
+++ b/shared/system/structure/インタフェース.md
@@ -1,4 +1,8 @@
-# システムとインタフェース
+# Interface
+
+境界。入出力をやり取りする接続箇所。
+
+インタフェースによって、情報や燃料をやり取りしたり、特定の位置に固定したりする。
 
 システムは単体で独立していて、しかし、他のシステムと繋がっている。
 
