--- a/shared/system/structure/module/モジュール.md
+++ b/shared/system/structure/module/モジュール.md
@@ -34,3 +34,8 @@ component: 構成要素
 - 特定の場所でしか使わないか
 
 モジュール化とは、その部分を捨てやすく作ること。
+
+例えば、車全体を改造したり修理したりできる人は少ないけど、タイヤを替えるくらいなら代わりのタイヤと機材があればできる。タイヤがモジュール。
+車屋であってもエンジンに手を入れるのは難しいが、新しいエンジンと交換するだけなら丸ごと外して新しいものを接続し直すだけ。
+
+部品の内部構造や仕組みを知らなくても、丸ごと交換できるのがモジュールであるということ。
