--- a/shared/system/structure/インタフェース.md
+++ b/shared/system/structure/インタフェース.md
@@ -1,6 +1,6 @@
 # Interface
 
-境界。入出力をやり取りする接続箇所。
+境界（Border）。入出力をやり取りする接続箇所。
 
 インタフェースによって、情報や燃料をやり取りしたり、特定の位置に固定したりする。
 
@@ -19,3 +19,39 @@
 インタフェースは、名前で区別して、入力と出力を考える。
 
 [わかりやすいシステム構成図の書き方 - Qiita](https://qiita.com/fetaro/items/c8420f5de48f48317391)
+
+システム的にはインタフェース。
+
+設計の主役。
+
+境界線を「どこに引くか」という（領域を決める）部分（ドメイン）と、
+境界面で「どうやりとりするか」という部分（インタフェース）がある。
+
+境界面で何をどのようにやり取りするかを考える活動が設計。
+
+前者はどちらかというとモデリング。
+
+後者は具体的なやりとりとなるとコミュニケーションの概念を含む。
+どちらかというとこっちが設計。
+
+名前もインタフェースの一部として、意味を伝える。
+
+インタフェースというのは、情報をやり取りする接点。
+
+境界には「外観」と「機能」がある。
+外から見える装飾や使い方と、内部の構造や意味。
+
+境界をどこに置くか、どこでコンポーネントを分けるか、は意思決定。
+目的によっても変わるけど、基本は関心の分離。一つのコンポーネントに一つの関心・機能。
+
+境界があれば、領域（ドメイン）がある。
+
+対象（オブジェクト）の境界、
+文脈（コンテキスト）の境界、
+構成要素（コンポーネント）の境界、
+製品と利用者の境界、
+のように色々な境界がある。
+
+インタフェースというとシステムやコミュニケーションの用語かも。一つの境界ではある。接点。
+
+ある領域と別の領域の境界を考える。
