--- a/shared/computer/software/development/設計書.md
+++ b/shared/computer/software/development/設計書.md
@@ -11,3 +11,8 @@
 今の設計はコードとか見ればわかる。補助的なコメントとかバージョン管理の履歴とかで十分。あとは全体像をまとめるような少量のドキュメントがあると便利。
 その上で、「どうしてこの設計になったのか」を細かく残す。
 設計判断のために「どういう設計を良しとするのか」のドキュメントも最初に作ると便利。
+
+ソフトウェア分野における設計書とは、ドキュメントとコードのこと。
+コードとは別に人間的な書き方のドキュメントをまとめるのはいいが、あくまでも詳細設計はコード。できるだけ重複した設計書は残さない方がいい。
+
+コードが書けないのは、設計書が書けないのと同じ。設計書が書けない設計者に用はない。
