--- a/shared/computer/software/programming/ソフトウェアプログラミング.md
+++ b/shared/computer/software/programming/ソフトウェアプログラミング.md
@@ -10,3 +10,7 @@
 後から変更しやすいようにする。
 
 ソフトウェアサービスやアプリケーションを動かす、あるいはもっというとコンピュータを動かすという大きな括りの中にソフトウェアプログラミングがある。まずはコンピュータを動かすことを知らないといけない。
+
+プログラミングやコーディングはソフトウェア開発のごく一部でしかない。
+
+コンピュータに何らかの処理を実行してもらうまでの工程。
