--- a/shared/computer/software/ソフトウェアの特徴.md
+++ b/shared/computer/software/ソフトウェアの特徴.md
@@ -1,7 +1,14 @@
 ソフト（柔らかい）でないと、ソフトウェアとは言えない。
 
-- 変更が容易である
+- 容易に変更できる
+- 容易にコピーできる（量産が必要ない）
 - 設計書（コード）を読み込んですぐに動かせる
 
 ソフトウェアは本質的に複雑な製品だ。
 何の工夫もしないと、複雑な製品は容易に変更できなくなる。
+
+量産にかかる手間はせいぜいCD/DVDにデータを焼くくらい。
+一度作ると、それ以降の利益率が高いのはコピーが容易だからだ。
+
+ソフトウェアにおいては、設計書（コード）＝実装である。
+テストによって想定された仕様と実装が違うと確認されたら、設計書の書き間違いがあったということ。
