--- a/shared/design/設計.md
+++ b/shared/design/設計.md
@@ -187,3 +187,5 @@ https://qiita.com/bisketoriba/items/116e73224232703b3965
 意図してインタフェースを「決める」のがデザイン。
 
 隅研吾みたいに実用性のないお飾りのデザインしかできないのはどれだけそれが綺麗でも建築家とは言えない。
+
+外観としてのインタフェースと、構造としてのインタフェースがある。
