--- a/shared/system/structure/module/モジュール.md
+++ b/shared/system/structure/module/モジュール.md
@@ -39,3 +39,5 @@ component: 構成要素
 車屋であってもエンジンに手を入れるのは難しいが、新しいエンジンと交換するだけなら丸ごと外して新しいものを接続し直すだけ。
 
 部品の内部構造や仕組みを知らなくても、丸ごと交換できるのがモジュールであるということ。
+
+同じインタフェースを持った、規格化されたモジュールは互換性を持つ。
