--- a/shared/engagement/popular/魅力.md
+++ b/shared/engagement/popular/魅力.md
@@ -2,45 +2,17 @@
 
 愛嬌、魅力、魅惑。
 
-製品やサービスが「欲しい」と思う要素。
-
-人間は、他人が魅力を感じているものに魅力を感じる。
-よく売れていると知られているものはそれだけでさらによく売れる。
-
-外見の美しさや魅力: 外見が美しく、魅力的な人や物は、目を引き、心を惹きつけます。
-
-自信やオーラ: 自信を持ち、オーラを放つ人や物は、周囲に影響力を与え、魅力的に映ります。
-
-賢さや知性: 賢く、知的な人や物は、知識や洞察力に対して尊敬され、魅力的に映ります。
-
-性格や人柄: 温かみのある性格や、優しい人柄は、人を引きつけ、魅力的に見えます。
-
-ユーモアや面白さ: ユーモアや面白さを持っている人や物は、周囲を楽しませ、魅力的に映ります。
-
-強さやカリスマ: 強さやカリスマを持っている人や物は、リーダーシップを発揮し、周囲から尊敬され、魅力的に映ります。
-
-意外性: 強みと弱みのギャップ、驚き
-
-派手さ: 言動がとにかく強烈
-
-信念や欲望: 目的に対してブレがない、一貫性がある
-
-ポジティブなエネルギー: ポジティブなエネルギーを持っている人や物は、周囲の人々に活気や希望を与え、魅力的に映ります。
-
-独自性や個性: 独自的な価値観や個性を持っている人や物は、特別であると感じられ、魅力的に映ります。
-
-情熱や熱意: 情熱的で熱意のある人や物は、周囲の人々を感動させ、魅力的に映ります。
-
-親近感や共感: 親近感を持ち、共感を示す人や物は、相手に寄り添い、魅力的に映ります。
-
-安心感や信頼性: 安心感や信頼性を持っている人や物は、周囲の人々に頼られ、魅力的に映ります。
-
-神秘性: 評価は高いのに実態が謎に包まれている
-
 魅力というのは印象でしかない。
 
 映え。
 
 好かれるためには魅力が必要。
 
-色気にはある種のミステリアスさがある。相手を知りたくなるということかも。余裕とか経験値、品の良さなんかも根本的なところは懐の深さからくる異質さかも。
+色気にはある種のミステリアスさ、神秘性がある。相手を知りたくなるということかも。余裕とか経験値、品の良さなんかも根本的なところは懐の深さからくる異質さかも。
+
+製品やサービスが「欲しい」と思う要素。
+
+人間は、他人が魅力を感じているものに魅力を感じる。
+よく売れていると知られているものはそれだけでさらによく売れる。
+
+色気。
