--- a/shared/training/練習の順序.md
+++ b/shared/training/練習の順序.md
@@ -32,3 +32,9 @@
 
 初心者に知識を与えるべきかどうか。
 学ぶ楽しみを奪ってしまわないか。
+
+練習は同じことばかりしても飽きるので、優先順位というよりは優先度でいい。いくつかセットで覚えていく。
+
+まずは技術に気を払わなくても使える段階を目指す。
+格ゲーだったら運指とか、ボタンやコマンドを意識せずに選べるとか。
+その中でも全て一気にはできないので、優先度を決めて、一度に練習できること以外は後回しにする。
