--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -144,11 +144,13 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 低め中心や緩急重視を使うなら走力よりも優先して捕球Cに上げてもいい。後逸しやすい。
 
-優秀な選手ならA-C-A-A-C-Cを目指したい。
+優秀な選手ならA-C-A-A-C-Cくらいを目指したい。
 
 捕手の守備力が低いとホームのタッチアウトが遅い。
 
 捕手の肩はCあった方がいいみたい。かなりの盗塁を牽制できる。
+
+キャッチャーの肩がDあるだけでも簡単には盗塁されない。
 
 ## 一塁手
 
