--- a/shared/sports/baseball/野球の定石.md
+++ b/shared/sports/baseball/野球の定石.md
@@ -34,6 +34,8 @@
 
 ノーアウト一塁は打って一二塁や一三塁になると特大のチャンスなので、バントしなくてもいい。
 
+送りバントは基本的にダブルプレーを回避するためのプレイ。あとは打てない打者に最低限の仕事をさせるプレイ。
+
 ## 守りのセオリー
 
 - ホームアウトを狙うなら内野は前に出る
@@ -43,6 +45,8 @@
   - （内野を抜かれやすくなるが、中央付近を抜かれても後ろに外野がいるので長打は避けられる）
 
 走者一塁の時は一打抜かれても一二塁か一三塁になるだけなのでゲッツーシフトでもいい。特にノーアウトでないならさらにリスクが低い。
+
+1アウト3塁なんかだと1点は仕方ない。傷を大きくしないように確実に1アウトを取る。三振が取れたらベスト。
 
 ## 打順のセオリー
 
