--- a/shared/video/making/動画を作る.md
+++ b/shared/video/making/動画を作る.md
@@ -10,3 +10,6 @@
 - テロップを挿入する
 - BGMやSEを挿入する
 - フィルターをかける
+
+動画作成とかでプロンプトやアイコンなどを作る場合は位置関係と素材があれば簡単に組み立てられるようにすると楽。
+たとえばポケモン配信だと手持ちのポケモンの情報を並べることが多いので、ポケモン1匹分の画像と持ち物のアイコン、持ち物の名称を同じ位置に配置したアイコンを簡単に作れるといい。
