--- a/shared/communication/channels/talk/話.md
+++ b/shared/communication/channels/talk/話.md
@@ -48,3 +48,5 @@ conversation になっていく。まず talk が成立してから、conversati
 印象だけでなく、具体的な事象として、何があったか、いつ、誰と、どこであったか、も詳しく覚えておくと話題にしやすい。
 
 印象や感想は、事象をまとめてしまっているので、話を広げるならまとめる前の生の状態の方が広げやすい。
+
+相手に合わせるばかりではつまらない。まずテンポを合わせて、慣らしてからゆっくりと自分のテンポに持ち込む。
