--- a/shared/entertainment/楽しみ.md
+++ b/shared/entertainment/楽しみ.md
@@ -17,3 +17,7 @@
 楽しまないと生きられない。人間にとってはもはや楽しむことが義務とも言える。
 
 状況を楽しめていないということは、逃げ腰になっているということ。
+
+「もしひとつの「楽しい」が終わらなかったら、次の「楽しい」を探さなかったと思う。」『瑠璃の宝石』
+
+楽しむことは、続けること。続けることは、楽しむこと。
